Removed unneeded String resources (replaced by Core modules).

--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -21,20 +21,13 @@
     <string name="protonmail">ProtonMail</string>
     <string name="encrypted_emails">ŠIFROVANÝ EMAIL</string>
     <string name="secure_email_swiss">Bezpečný email sídlící <br/>ve Švýcarsku</string>
-    <string name="decrypt_mailbox_">Dešifrovat <b>schránku</b></string>
     <string name="decrypt">Dešifrovat</string>
-    <string name="user_sign_in_">Přihlášení</string>
-    <string name="two_factor_sign_in_">Dvoufázové ověření</string>
-    <string name="sign_in_">Přihlásit se</string>
+    <string name="sign_in">Přihlásit se</string>
     <string name="sign_out">Odhlásit se</string>
     <string name="sign_out_question">Opravdu se chcete odhlásit?</string>
-    <string name="mailbox_password_">Heslo k poštovní schránce</string>
-    <string name="two_factor_code_">Dvoufázový kód</string>
     <string name="processing_request">Váš požadavek se zpracovává</string>
     <!-- should check for html tag -->
     <string name="need_to_be_logged_in">Nejste přihlášen(a)!</string>
-    <string name="forgot_password_">Zapomenuté heslo?</string>
-    <string name="reset_mailbox_password_">NASTAVIT NOVÉ HESLO POŠTOVNÍ SCHRÁNKY</string>
     <string name="forgot_mailbox_password">Chcete-li nastavit nové heslo poštovní schránky, použijte prosím webovou verzi ProtonMail na protonmail.com</string>
     <!-- Toast messages -->
     <string name="error_chrome_disabled">Obsah nelze načíst. Povolte prohlížeč Chrome</string>
@@ -44,10 +37,7 @@
     <string name="no_more_messages">Žádné další zprávy</string>
     <string name="mailbox_login_failure">Přihlášení do poštovní schránky se nezdařilo</string>
     <string name="login_failure">Přihlášení se nezdařilo</string>
-    <string name="invalid_server_proof">Neplatné ověření serveru</string>
-    <string name="invalid_credentials">Neplatné přihlašovací údaje</string>
     <string name="incorrect_key_parameters">Nesprávné klíčové parametry</string>
-    <string name="invalid_mailbox_password">Neplatné heslo k poštovní schránce</string>
     <string name="not_signed_up">Nejste přihlášeni do programu ProtonMail Android Beta</string>
     <string name="no_network">Žádná síť</string>
     <string name="no_network_queued">Žádná síť, zpráva zařazena do fronty</string>
@@ -217,47 +207,18 @@
     <string name="enter">Zadejte</string>
     <string name="cancel">Zrušit</string>
     <string name="close">Zavřít</string>
-    <string name="change_password_">Změnit heslo</string>
-    <string name="change_mailbox_password_">Změnit heslo poštovní schránky</string>
     <string name="eo_password_title">Nastavit heslo</string>
     <string name="eo_password_subtitle">Nastavit heslo pro šifrování zprávy uživatelům bez ProtonMailu</string>
     <string name="eo_password_more_info">Získat více informací</string>
-    <string name="old_login_password_">Aktuální přihlašovací heslo</string>
-    <string name="new_login_password_">Nové heslo</string>
-    <string name="confirm_new_login_password_">Potvrzení nového hesla</string>
-    <string name="new_mailbox_password_">Nové heslo k poštovní schránce</string>
-    <string name="confirm_new_mailbox_password_">Potvrdit nové heslo k poštovní schránce</string>
     <string name="no_attachments">Bez příloh</string>
-    <string name="new_passwords_not_valid">Neplatný údaj</string>
-    <string name="new_passwords_do_not_match">Nová hesla se neshodují</string>
-    <string name="new_login_password_saved">Nové přístupové heslo uloženo</string>
-    <string name="new_mailbox_password_saved">Nové heslo k poštovní schránce bylo uloženo</string>
     <string name="pin_lock_option_settings">Možnost zamknutí aplikace</string>
     <string name="pin_lock_after">Zamknout aplikaci po</string>
     <string name="lock_the_app">Zamknout aplikaci</string>
     <string name="display_name_banned_chars">Neplatné zobrazované jméno. \'&gt;\' a \'&lt;\' nejsou povoleny</string>
     <string name="cont">Pokračovat</string>
     <string name="reply_prefix_on">Dne</string>
-    <string name="create_new_account_">Vytvořit nový účet</string>
-    <string name="setup_new_account">Nastavení účtu</string>
-    <string name="create_account_">Vytvořit účet</string>
-    <string name="create_passwords_">Nastavit heslo</string>
-    <string name="caps_username_">Uživatelské jméno</string>
-    <string name="caps_login_password_">Heslo</string>
-    <string name="caps_confirm_password_">Potvrdit heslo</string>
-    <string name="caps_optional_">* VOLITELNÉ</string>
-    <string name="update_me_for_new_features_">Informujte mě o nových funkcích</string>
-    <string name="create_mailbox_password_">Vytvořit heslo</string>
-    <string name="password_note_">&lt;b&gt;Poznámka:&lt;/ b&gt; Toto slouží k šifrování a dešifrování zpráv.
-        Neztraťte toto heslo, nelze jej získat zpět. Pokud jej ztratíte, nebudete již moci číst vaše e-maily.</string>
-    <string name="username_note_"><b>Poznámka:</b> Uživatelské jméno je zároveň také vaše e-mailová adresa služby ProtonMail</string>
     <string name="terms_and_conditions">Užíváním služby ProtonMail, souhlasíte s našimi\n
         <a href="https://protonmail.com/terms-and-conditions">pravidly a podmínkami</a> a <a href="https://protonmail.com/privacy-policy">ochranou soukromí</a></string>
-    <string name="encryption_setup_">Nastavení šifrování</string>
-    <string name="high_security_">Vysoký stupeň zabezpečení (2048 bitů)</string>
-    <string name="current_standard_">Současný standard</string>
-    <string name="extreme_security_">Mimořádné zabezpečení (4096 bitů)</string>
-    <string name="highest_security_">Nejvyšší možná úroveň šifrování.<b>Nastavení může trvat až několik minut.</b></string>
     <string name="labels_title_apply">Použít štítky</string>
     <string name="labels_title_add">Přidat štítek</string>
     <string name="labels_title">Štítky (Co takhle \"Nálepky\" - nezní to líp? :))</string>
@@ -296,13 +257,6 @@
     <string name="display_images">Zobrazit grafiku</string>
     <string name="retry">Obnovit</string>
     <string name="saving_failed_no_conn">Ukládání se nezdařilo, nejste připojeni k internetu</string>
-    <string name="username_is_available">%s je k dispozici!</string>
-    <string name="username_is_not_available">%s NENÍ k dispozici!</string>
-    <string name="username_is_too_long">Maximum length for a username is %d characters!</string>
-    <string name="congratulation_">Blahopřejeme!</string>
-    <string name="new_account_ready_">Váš nový zabezpečený e-mailový účet je připraven.</string>
-    <string name="optional_email_note_">Pokud zapomenete heslo, volitelný sekundární e-mail Vám umožňuje provést obnovu hesla pro přihlášení.</string>
-    <string name="optional_display_name_">Toto je název, který se zobrazí v poli odesílatele při odeslání e-mailu.</string>
     <string name="close_engagement">ukončit průvodce</string>
     <string name="engagement_title_welcome">Vítejte na ProtonMail!</string>
     <string name="engagement_title_swipe">Akce gesta rychlého přejetí</string>
@@ -320,7 +274,6 @@
     <string name="attachment_exists">Příloha je již připojena</string>
     <string name="sending_email_success">Ověřovací kód odeslán</string>
     <string name="sending_email_failed">Ověřovací kód odesílání selhalo</string>
-    <string name="password_not_valid_">Zadané heslo není platné</string>
     <string name="send_code_wait">Počkejte %d sekund a kliknětě znovu</string>
     <string name="eo_password_not_completed">Heslo zpráv není dokončeno.</string>
     <string name="delinquency_subtitle">Přístup k tomuto účtu je zakázán z důvodu neuhrazené platby. Přihlaste se k protonmail.com a uhraďte nezaplacenou fakturu.</string>
@@ -381,111 +334,20 @@
     <string name="log_out">Log out %s?</string>
     <string name="logout_question">Opravdu se chcete odhlásit?</string>
     <string name="logout_question_next_account">Opravdu se chcete odhlásit z aktuálního účtu a pokračovat s %s?</string>
-    <string name="upselling_">Přejít na vyšší verzi/Přispět</string>
-    <string name="upselling_title_">ProtonMail je zdarma a open source</string>
-    <string name="upselling_subtitle_">Potřebujeme Vaši podporu, abychom mohli i nadále chránit soukromí a vylepšovat služby ProtonMail</string>
-    <string name="upselling_donate_title_">Přispět</string>
-    <string name="upselling_upgrade_title_">Rozšířit na ProtonMail Plus</string>
-    <string name="upselling_donate_subtitle">Váš příspěvek nám pomůže navýšit
-    naše kapacity a nadále vyvíjet ProtonMail jako bezplatný open source software. Jenom díky 
-    podpoře komunity jsme schopni ProtonMail nadále poskytovat lidem po celém 
-    světě.</string>
-    <string name="upgrade_donate">Přejít na vyšší verzi/Přispět</string>
-    <string name="upselling_donate_pick_amount_">Vyberte výši příspěvku nebo zadejte libovolnou částku</string>
-    <string name="amount_5_">5 eur</string>
-    <string name="amount_15">15 eur</string>
-    <string name="amount_50">50 eur</string>
-    <string name="amount_100">100 eur</string>
-    <string name="donation_amount_">Vyberte částku příspěvku</string>
-    <string name="donate_">Přispět</string>
-    <string name="donate_paypal_bitcoin_">Přispet pomocí PayPal nebo Bitcoin</string>
-    <string name="upgrade_line1_">Zahrnuto ve verzi zdarma</string>
-    <string name="upgrade_line2_">Úložiště o velikosti 5 Gb</string>
-    <string name="upgrade_line3_">Použijte svou vlastní doménu</string>
-    <string name="upgrade_line4_">Až 5 přezdívek</string>
-    <string name="upgrade_line5_">Přednostní uživatelská podpora</string>
     <string name="upgrade">Rozšířit</string>
-    <string name="payment_options_">Možnosti platby</string>
-    <string name="other_plans_">Pro volby s větším úložištěm, přejděte prosím na webové rozhraní ProtonMail.</string>
-    <string name="upgrade_paid_user">Thank you for being a paid user!</string>
-    <string name="select_account_type_">Vyberte si typ účtu</string>
-    <string name="select_account_type_subtitle_">ProtonMail je bezplatná služba
-    opravdu pro každého. Výběrem placeného účtu můžete podpořit ochranu soukromí na Internetu.</string>
-    <string name="plan_free_with_price_">ZDARMA</string>
-    <string name="plan_plus_with_price_">PLUS %s /měsíčně</string>
-    <string name="plan_visionary_with_price_">VISIONARY %s /měsíčně</string>
-    <string name="plan_business_with_price_">BUSINESS %s /měsíčně</string>
-    <string name="plan_free_title_">Základní účet s omezenými funkcemi</string>
-    <string name="plan_plus_title_">Zabezpečený e-mail s pokročilými funkcemi</string>
-    <string name="plan_visionary_title_">Speciální účty pro naše podporovatele</string>
-    <string name="plan_business_title_">Speciální účty pro naše podporovatele</string>
-    <string name="plan_plus_line2_">Pošlete až 1000 zpráv denně</string>
-    <string name="plan_plus_line3_">Štítky a vlastní filtry</string>
-    <string name="plan_plus_line4_">Odeslat šifrované zprávy externím příjemcům</string>
-    <string name="plan_plus_line7_">Přednostní zákaznická podpora</string>
-    <string name="plan_free_line1_">Úložiště o velikosti 500 Mb</string>
-    <string name="plan_free_line2_">150 zpráv denně</string>
-    <string name="plan_free_line3_">20 štítků</string>
-    <string name="plan_free_line4_">Vlastní domény: nepodporováno</string>
-    <string name="plan_free_line5_">1 Adresa</string>
-    <string name="plan_free_line6_">Zákaznická podpora: omezena</string>
-    <string name="plan_visio_line2_">Bez limitu odeslaných zpráv</string>
-    <string name="plan_visio_line3_">Snadný přístup k novým funkcím</string>
-    <string name="plan_visio_line6_">Pomozte nám vybrat nové funkce prostřednictvím ankety, která je k dispozici pro účty typu Visionary</string>
-    <string name="plan_business_line1_">zapezpečené emaily již brzy i pro organizace!</string>
-    <string name="currency_duration_">Měna &amp; Doba trvání</string>
-    <string name="credit_card_name_">Jméno na kreditní/debetní kartě</string>
-    <string name="zip_code_">PSČ</string>
-    <string name="card_number_">Číslo karty</string>
-    <string name="billing_information_">Fakturační údaje</string>
     <string name="country">Stát</string>
-    <string name="cvc_">CVC</string>
-    <string name="terms_and_conditions_billing_">Klepnutím na tlačítko Odeslat, souhlasíte
-    s dodržováním\n<a href="https://protonmail.com/terms-and-conditions">pravidel a podmínek služby ProtonMail</a></string>
-    <string name="submit_">Odeslat</string>
-    <string name="currency_">Měna</string>
-    <string name="plan_duration_">Účtovací období</string>
-    <string name="duration_annual_line1_">Roční předplatné <font color="#C3E129">Ušetřete 20%</font></string>
-    <string name="per_month_text_only_">za měsíc</string>
-    <string name="duration_annual_line3">Učtováno jako %s /Rok</string>
-    <string name="duration_annual_line4">Učtováno jako %s /Měsíc</string>
-    <string name="duration_monthly_line1_">Měsíční tarif</string>
-    <string name="duration_monthly_line3">Ušetřete 20%</string>
     <string name="set_cont">Nastavit &amp; Pokračovat</string>
-    <string name="payment_error_">Chyba při platbě</string>
     <string name="error">Chyba</string>
-    <string name="try_another_card">Zkuste jinou kartu</string>
-    <string name="try_another_paypal">Zaplatit pomocí služby PayPal</string>
-    <string name="try_another_payment_method_">Zkusit jinou plat. metodu</string>
-    <string name="submit_paypal_">Zaplatit pomocí PayPal</string>
-    <string name="picker_card_">Kreditní/debetní karta</string>
-    <string name="picker_paypal_">PayPal</string>
-    <string name="paypal_disclaimer_">Chcete-li transakci dokončit, musíte se přihlásit ke svému účtu PayPal. Stránka s PayPal se otevře v novém okně prohlížeče.</string>
-    <string name="payment_picker_disclaimer_">Vyberte způsob platby</string>
-    <string name="payment_success_title_">Platba proběhla úspěšně!</string>
-    <string name="payment_success_text_">We are now upgrading your account, please wait a moment. Thank you for your support!</string>
-    <string name="donation_success_title">Donation Success!</string>
-    <string name="donation_success_text">Your support is essential to keeping ProtonMail running. Thank you for supporting internet privacy!</string>
-    <string name="create_free_account_">Založit účet zdarma</string>
     <string name="storage_gb">Úložiště o velikosti %d GB</string>
     <string name="storage_mb">Úložiště o velikosti %d Mb</string>
     <string name="max_addresses">Až %d alternativních e-mailových adres (přezdívek)</string>
     <string name="inline_prefix">[Inline]</string>
     <string name="inline_header">%d Vložené obrázky</string>
     <string name="select">Vybrat</string>
-    <string name="change_currency_">Změnit měnu</string>
-    <string name="switch_billing_monthly_">Přepnout na měsíční</string>
-    <string name="switch_billing_yearly">Přepnout na roční</string>
     <string name="warning">Upozornění</string>
     <string name="empty_recovery_email_question">Upozornění: Nenastavili jste sekundární email, v případě ztráty hesla, nebude možné účet obnovit. Pokračovat bez sekundárního e-mailu?</string>
     <string name="card_details_title">%1$s (*** %2$s)</string>
     <string name="card_details_subtitle">Vypršení platnosti %s</string>
-    <string name="payment_methods_">Způsoby platby</string>
-    <string name="payment_approval_activity">Payment Method Approval</string>
-    <string name="payment_approval_success">Payment method has been approved</string>
-    <string name="payment_approval_unknown_error_description">An error occurred while trying to verify your payment method. Please try again or switch to another card.</string>
-    <string name="payment_approval_cancel_error_description">Payment method verification cancelled. Please try again or switch to another card.</string>
-    <string name="payment_approval_consumed_error_description">Payment method already used for this payment. Please check status of your subscription.</string>
     <string name="no_payment_methods">Nemáte žádné uložené způsoby platby.</string>
     <string name="edit_payment_methods">Pro úpravu fakturačních údajů se prosím přihlašte pomocí protonmail.com.</string>
     <string name="message_not_loaded">Zpráva nebyla nahrána</string>
@@ -504,12 +366,7 @@
     <string name="delete_selected">Smazat vybrané</string>
     <string name="pin_not_activated">PIN nebyl aktivován</string>
     <string name="available_options">Dostupné možnosti</string>
-    <string name="current_recovery_email_">Aktuální sekundární e-mailová adresa</string>
     <string name="change_recovery_email">Změna sekundární emailové adresy</string>
-    <string name="new_recovery_email_">Nový sekundární email</string>
-    <string name="confirm_new_recovery_email_">Potvrdit nový sekundární email</string>
-    <string name="recovery_emails_invalid_">Emailová adresa neodpovídá zadání nebo je neplatná</string>
-    <string name="authenticate_">Ověřit</string>
     <string name="background_sync_subtitle">Pokud je tato volba povolena, synchronizace aplikace se serverem proběhne na pozadí. Zakázáním této volby vypnete upozornění push.</string>
     <string-array name="notification_options">
         <item>Bez zvuku a vibrací</item>
@@ -761,7 +618,6 @@
     <string name="contact_add_addr_to_group">Přidat adresu do skupin</string>
     <string name="title_activity_address_chooser">Upravit Adresy</string>
     <string name="title_activity_account_manager">Správa účtů</string>
-    <string name="title_activity_connect_account_">Připojit účet</string>
     <string name="account_manager_add_account">Přidat účet</string>
     <string name="account_manager_remove_all_accounts">Removing all accounts</string>
     <string name="account_manager_note">You can be simultaneously logged into an unlimited number of paid ProtonMail accounts and one free account.</string>
@@ -771,7 +627,6 @@
     <string name="manage_accounts_user_loggedout">%s (odhlášeno)</string>
     <string name="manage_accounts_user_primary">%s (výchozí)</string>
     <string name="account_manager_remove">Remove</string>
-    <string name="connect_account_login_title_">Login to your ProtonMail account</string>
     <string name="default_error_message">Došlo k chybě</string>
     <string name="no_contact_groups">Žádné skupiny kontaktů</string>
     <string name="search_contacts_inside_group">Vyhledávat kontakty ve skupině</string>
@@ -980,7 +835,6 @@
     <string name="connect_account_limit_subtitle">Nemůžete přidat další bezplatný účet ProtonMail. Lze přidat pouze jeden bezplatný účet ProtonMail. Odhlaste se prosím ze svého druhého bezplatného účtu nebo upgradujte jeden ze svých bezplatných účtů na účet placený.</string>
     <string name="switch_accounts_question">Přepnout účet?</string>
     <string name="switch_to_account">Přepnout na %s</string>
-    <string name="login_failure_missing_keys">Účet, který se pokoušíte přidat, nemá vygenerované klíče. Chcete-li vygenerovat klíče, nastavte v aplikaci tento účet jako hlavní, nebo se přihlaste pomocí webové verze, vygenerujte klíče a poté účet v aplikaci přidejte.</string>
     <!-- endregion -->
     <!-- region Compose shortcut -->
     <string name="shortcut_compose">Compose</string>
