--- a/app/src/main/res/values-hu-rHU/strings.xml
+++ b/app/src/main/res/values-hu-rHU/strings.xml
@@ -22,20 +22,13 @@
     <string name="encrypted_emails">TITKOSÍTOTT E-MAIL</string>
     <string name="secure_email_swiss">Biztonságos E-mail <br/>
 Svájci székhellyel</string>
-    <string name="decrypt_mailbox_"><b>Postafiók</b> visszafejtése</string>
     <string name="decrypt">Visszafejtés</string>
-    <string name="user_sign_in_">Bejelentkezés</string>
-    <string name="two_factor_sign_in_">Kétlépcsős hitelesítés</string>
-    <string name="sign_in_">Bejelentkezés</string>
+    <string name="sign_in">Bejelentkezés</string>
     <string name="sign_out">Kijelentkezés</string>
     <string name="sign_out_question">Biztos, hogy ki szeretne jelentkezni?</string>
-    <string name="mailbox_password_">E-mail jelszó</string>
-    <string name="two_factor_code_">Kétlépcsős kód</string>
     <string name="processing_request">A kérés feldolgozás alatt</string>
     <!-- should check for html tag -->
     <string name="need_to_be_logged_in">Nincs bejelentkezve!</string>
-    <string name="forgot_password_">Elfelejtett jelszó?</string>
-    <string name="reset_mailbox_password_">JELSZÓ ALAPHELYZETBE ÁLLÍTÁSA</string>
     <string name="forgot_mailbox_password">Az e-mail fiók jelszavának helyreállításához, kérjük, használja a ProtonMail webes felületét, a protonmail.com címen</string>
     <!-- Toast messages -->
     <string name="error_chrome_disabled">Tartalom betöltése nem sikerült. Engedélyezze a Chrome-ot</string>
@@ -45,10 +38,7 @@ Svájci székhellyel</string>
     <string name="no_more_messages">Nincs több üzenet</string>
     <string name="mailbox_login_failure">Az e-mail fiókba történő bejelentkezés sikertelen</string>
     <string name="login_failure">Sikertelen bejelentkezés</string>
-    <string name="invalid_server_proof">Érvénytelen szerver tanúsítvány</string>
-    <string name="invalid_credentials">Érvénytelen hitelesítés</string>
     <string name="incorrect_key_parameters">Hibás kulcs paraméterek</string>
-    <string name="invalid_mailbox_password">Érvénytelen e-mail jelszó</string>
     <string name="not_signed_up">Ön nem regisztrált a ProtonMail Android Béta verziójára</string>
     <string name="no_network">Nincs hálózat</string>
     <string name="no_network_queued">Nincs hálózat, az üzenet várólistára került</string>
@@ -208,47 +198,18 @@ Svájci székhellyel</string>
     <string name="enter">Belépés</string>
     <string name="cancel">Mégsem</string>
     <string name="close">Bezárás</string>
-    <string name="change_password_">Jelszó módosítása</string>
-    <string name="change_mailbox_password_">E-mail jelszó módosítása</string>
     <string name="eo_password_title">Jelszó beállítása</string>
     <string name="eo_password_subtitle">Állítson be egy jelszót a nem ProtonMail felhasználók számára küldött titkosított üzenethez</string>
     <string name="eo_password_more_info">További információ</string>
-    <string name="old_login_password_">Jelenlegi bejelentkezési jelszó</string>
-    <string name="new_login_password_">Új jelszó</string>
-    <string name="confirm_new_login_password_">Új jelszó megerősítése</string>
-    <string name="new_mailbox_password_">Új e-mail jelszó</string>
-    <string name="confirm_new_mailbox_password_">Új e-mail jelszó megerősítése</string>
     <string name="no_attachments">0 melléklet</string>
-    <string name="new_passwords_not_valid">Hibás adat</string>
-    <string name="new_passwords_do_not_match">A új jelszavak nem egyeznek meg</string>
-    <string name="new_login_password_saved">Új belépési jelszó elmentve</string>
-    <string name="new_mailbox_password_saved">Új e-mail jelszó elmentve</string>
     <string name="pin_lock_option_settings">Az alkalmazás zárolási beállításai</string>
     <string name="pin_lock_after">Az alkalmazás zárolása</string>
     <string name="lock_the_app">Alkalmazás zárolása</string>
     <string name="display_name_banned_chars">Érvénytelen megjelenítési név. \"&gt;\" és \"&lt;\" nem megengedett</string>
     <string name="cont">Tovább</string>
     <string name="reply_prefix_on">Be</string>
-    <string name="create_new_account_">Új fiók létrehozása</string>
-    <string name="setup_new_account">Fiók beállítása</string>
-    <string name="create_account_">Fiók létrehozása</string>
-    <string name="create_passwords_">Jelszó beállítása</string>
-    <string name="caps_username_">Felhasználónév</string>
-    <string name="caps_login_password_">Jelszó</string>
-    <string name="caps_confirm_password_">Jelszó megerősítése</string>
-    <string name="caps_optional_">* OPCIONÁLIS</string>
-    <string name="update_me_for_new_features_">Tájékoztasson az új funkciókról</string>
-    <string name="create_mailbox_password_">Jelszó létrehozása</string>
-    <string name="password_note_"><b>Megjegyzés:</b> Ez a jelszó az üzenetek titkosítására és visszafejtésére szolgál.
-        Ne veszítse el jelszavát, mert azt nem tudjuk visszaállítani. Ha jelszavát elveszíti, akkor többé nem lesz képes elolvasni üzeneteit.</string>
-    <string name="username_note_"><b>Megjegyzés:</b> A felhasználónév egyben a ProtonMail e-mail cím is</string>
     <string name="terms_and_conditions">A ProtonMail használatával elfogadja a\n
         <a href="https://protonmail.com/terms-and-conditions">felhasználási feltételeket</a> és az <a href="https://protonmail.com/privacy-policy">adatvédelmi irányelveket</a></string>
-    <string name="encryption_setup_">Titkosítás beállítása</string>
-    <string name="high_security_">Magas szintű biztonság (2048 bit)</string>
-    <string name="current_standard_">A jelenlegi szabvány</string>
-    <string name="extreme_security_">Extrém szintű biztonság (4096 bites)</string>
-    <string name="highest_security_">Az elérhető legmagasabb szintű titkosítás.<b> Beállítása több percig is eltarthat.</b></string>
     <string name="labels_title_apply">Címkék alkalmazása</string>
     <string name="labels_title_add">Címke hozzáadása</string>
     <string name="labels_title">Címkék</string>
@@ -287,15 +248,6 @@ Svájci székhellyel</string>
     <string name="display_images">Távoli tartalom megjelenítése</string>
     <string name="retry">Újra</string>
     <string name="saving_failed_no_conn">Mentés sikertelen, nincs kapcsolat</string>
-    <string name="username_is_available">%s elérhető!</string>
-    <string name="username_is_not_available">%s nem érhető el!</string>
-    <string name="username_is_too_long">Maximum length for a username is %d characters!</string>
-    <string name="congratulation_">Gratulálunk!</string>
-    <string name="new_account_ready_">Az új biztonságos e-mail\n fiókja készen áll.</string>
-    <string name="optional_email_note_">Az opcionális helyreállító e-mail cím, lehetőséget biztosít
-        a bejelentkezési jelszó visszaállítására, ha elfelejtené azt.</string>
-    <string name="optional_display_name_">E-mail küldésekor, ez a név fog megjelenni
-        feladóként.</string>
     <string name="close_engagement">bemutató bezárása</string>
     <string name="engagement_title_welcome">Üdvözöljük a ProtonMailnél!</string>
     <string name="engagement_title_swipe">Gyors csúsztatási műveletek</string>
@@ -313,7 +265,6 @@ Svájci székhellyel</string>
     <string name="attachment_exists">Ez a melléklet már csatolva van</string>
     <string name="sending_email_success">Ellenőrzési kód elküldve</string>
     <string name="sending_email_failed">Ellenőrzési kód elküldése nem sikerült</string>
-    <string name="password_not_valid_">A beírt jelszó helytelen</string>
     <string name="send_code_wait">Várjon %d másodpercet majd kattintson újra</string>
     <string name="eo_password_not_completed">Jelszó hiányzik.</string>
     <string name="delinquency_subtitle">A fiók elérése számlatartozás miatt le van tiltva. Kérjük, lépjen be a protonmail.com weblapon és egyenlítse ki a számláit.</string>
@@ -370,109 +321,20 @@ Svájci székhellyel</string>
     <string name="log_out">Kijelentkezés %s?</string>
     <string name="logout_question">Biztos, hogy ki szeretne jelentkezni?</string>
     <string name="logout_question_next_account">Biztos benne, hogy kijelentkezik az aktuális fiókból és a következőt használja: %s?</string>
-    <string name="upselling_">Csomagváltás/Adományozás</string>
-    <string name="upselling_title_">A ProtonMail ingyenes és nyílt forráskódú</string>
-    <string name="upselling_subtitle_">Szükségünk van a támogatására, hogy tovább dolgozhassunk a személyes adatok védelméért és fejleszthessük a ProtonMailt</string>
-    <string name="upselling_donate_title_">Adományozás</string>
-    <string name="upselling_upgrade_title_">Váltás ProtonVPN Plus csomagra</string>
-    <string name="upselling_donate_subtitle">Adománya segít abban, hogy kapacitásunkat növelhessük, és a ProtonMail továbbra is egy ingyenes és nyílt forráskódú szoftver maradhasson. Csak a közösség támogatása teszi lehetővé, hogy a ProtonMail szolgáltatásait az emberek bárhol a világon igénybe vehessék.</string>
-    <string name="upgrade_donate">Csomagváltás/Adományozás</string>
-    <string name="upselling_donate_pick_amount_">Válasszon egy összeget vagy írjon be egy tetszőleges értéket</string>
-    <string name="amount_5_">5€</string>
-    <string name="amount_15">15€</string>
-    <string name="amount_50">50€</string>
-    <string name="amount_100">100€</string>
-    <string name="donation_amount_">Írja be az adomány összegét</string>
-    <string name="donate_">Adományozás</string>
-    <string name="donate_paypal_bitcoin_">Adományozás PayPal vagy Bitcoin fizetéssel</string>
-    <string name="upgrade_line1_">Minden ami az ingyenes csomagban is elérhető</string>
-    <string name="upgrade_line2_">5 GB tárhely</string>
-    <string name="upgrade_line3_">Saját domain név használata</string>
-    <string name="upgrade_line4_">5 e-mail alias</string>
-    <string name="upgrade_line5_">Elsőbbségi felhasználói támogatás</string>
     <string name="upgrade">Csomagváltás</string>
-    <string name="payment_options_">Fizetési mód</string>
-    <string name="other_plans_">Több tárhelyet tartalmazó csomagokra a
-    ProtonMail webes felületén válthat.</string>
-    <string name="upgrade_paid_user">Köszönőjük, hogy ön fizető ügyfél!</string>
-    <string name="select_account_type_">Válassza ki a fiók típusát</string>
-    <string name="select_account_type_subtitle_">A ProtonMail egy ingyenes szolgáltatás,
-    a közösség érdekeiért. Ön is támogathatja a személyes adatok védelmét egy fizetős csomagra váltással.</string>
-    <string name="plan_free_with_price_">INGYENES</string>
-    <string name="plan_plus_with_price_">PLUS %s/hó</string>
-    <string name="plan_visionary_with_price_">VISIONARY %s/hó</string>
-    <string name="plan_business_with_price_">BUSINESS %s/hó</string>
-    <string name="plan_free_title_">Alap fióktípus, korlátozott lehetőségekkel</string>
-    <string name="plan_plus_title_">Biztonságos e-mail, fejlett funkciókkal</string>
-    <string name="plan_visionary_title_">Speciális fiók támogatóknak</string>
-    <string name="plan_business_title_">Speciális fiók támogatóknak</string>
-    <string name="plan_plus_line2_">1000 üzenet küldése naponta</string>
-    <string name="plan_plus_line3_">Címkék és egyedi szűrők</string>
-    <string name="plan_plus_line4_">Titkosított üzenetek küldése külsős címzetteknek</string>
-    <string name="plan_plus_line7_">Elsőbbségi felhasználói támogatás</string>
-    <string name="plan_free_line1_">500 MB tárhely</string>
-    <string name="plan_free_line2_">150 üzenet naponta</string>
-    <string name="plan_free_line3_">20 címke</string>
-    <string name="plan_free_line4_">Saját domain név: nem lehetséges</string>
-    <string name="plan_free_line5_">1 cím</string>
-    <string name="plan_free_line6_">Felhasználói támogatás: korlátozott</string>
-    <string name="plan_visio_line2_">Nincs küldési korlát</string>
-    <string name="plan_visio_line3_">Korai hozzáférés új funkciókhoz</string>
-    <string name="plan_visio_line6_">Szavazás új funkciók fejlesztésére a Visionary csomagban</string>
-    <string name="plan_business_line1_">szervezetek számára hamarosan elérhető a titkosított e-mailek használata!</string>
-    <string name="currency_duration_">Pénznem és Időtartam</string>
-    <string name="credit_card_name_">Kártyabirtokos neve</string>
-    <string name="zip_code_">Irányítószám</string>
-    <string name="card_number_">Kártya szám</string>
-    <string name="billing_information_">Számlázási adatok</string>
     <string name="country">Ország</string>
-    <string name="cvc_">Biztonsági kód</string>
-    <string name="terms_and_conditions_billing_">Az Elküldés gomb megnyomásával
-    elfogadja a\n<a href="https://protonmail.com/terms-and-conditions">ProtonMail Felhasználási Feltételeteket</a></string>
-    <string name="submit_">Elküldés</string>
-    <string name="currency_">Pénznem</string>
-    <string name="plan_duration_">Számlázási ciklus</string>
-    <string name="duration_annual_line1_">Éves előfizetés <font color="#C3E129">20% megtakarítás</font></string>
-    <string name="per_month_text_only_">havonta</string>
-    <string name="duration_annual_line3">Számlázva évente %s</string>
-    <string name="duration_annual_line4">Számlázva %s havonta</string>
-    <string name="duration_monthly_line1_">Havi előfizetés</string>
-    <string name="duration_monthly_line3">20% megtakarítás</string>
     <string name="set_cont">Mentés és folytatás</string>
-    <string name="payment_error_">Hiba a fizetéskor</string>
     <string name="error">Hiba</string>
-    <string name="try_another_card">Próbálja meg egy másik kártyát</string>
-    <string name="try_another_paypal">Fizetés PayPallal</string>
-    <string name="try_another_payment_method_">Próbáljon egy másikat</string>
-    <string name="submit_paypal_">Fizetés Paypal használatával</string>
-    <string name="picker_card_">Bankkártya</string>
-    <string name="picker_paypal_">PayPal</string>
-    <string name="paypal_disclaimer_">A tranzakció végrehajtásához be kell jelentkeznie PayPal-fiókjába. Megnyitjuk egy új böngészőablakban a PayPal-t.</string>
-    <string name="payment_picker_disclaimer_">Kérem, válassza ki a fizetési módot</string>
-    <string name="payment_success_title_">Sikeres fizetés!</string>
-    <string name="payment_success_text_">Most frissítjük fiókját, kérjük várjon egy percet. Köszönjük a támogatást!</string>
-    <string name="donation_success_title">Sikeres adományozás!</string>
-    <string name="donation_success_text">A támogatása elengedhetetlen, hogy a ProtonMail működhessen. Köszönjük, hogy támogatja a személyes adatok védelmét az interneten!</string>
-    <string name="create_free_account_">Ingyenes fiók létrehozása</string>
     <string name="storage_gb">%d GB tárhely</string>
     <string name="storage_mb">%d MB tárhely</string>
     <string name="max_addresses">%d e-mail alias</string>
     <string name="inline_prefix">[Inline]</string>
     <string name="inline_header">%d beágyazott kép</string>
     <string name="select">Kiválasztás</string>
-    <string name="change_currency_">Pénznem módosítása</string>
-    <string name="switch_billing_monthly_">Váltás havi fizetésre</string>
-    <string name="switch_billing_yearly">Váltás éves fizetésre</string>
     <string name="warning">Figyelem</string>
     <string name="empty_recovery_email_question">Figyelem: nem adott meg helyreállító e-mail címet. Ha elveszíti a jelszavát, így lehetetlen lesz visszaszereznie a fiók elérést. Biztos, hogy folytatja helyreállító e-mail nélkül?</string>
     <string name="card_details_title">%1$s (*** %2$s)</string>
     <string name="card_details_subtitle">Lejárat %s</string>
-    <string name="payment_methods_">Fizetési módok</string>
-    <string name="payment_approval_activity">Fizetési mód jóváhagyása</string>
-    <string name="payment_approval_success">A fizetési mód jóváhagyásra került</string>
-    <string name="payment_approval_unknown_error_description">Hiba történt a fizetési mód ellenőrzése közben. Próbálkozzon újra, vagy váltson másik kártyára.</string>
-    <string name="payment_approval_cancel_error_description">Fizetési mód ellenőrzése megszakítva. Próbálkozzon újra, vagy váltson másik kártyára.</string>
-    <string name="payment_approval_consumed_error_description">Fizetési módot már használta erre a fizetésre. Kérjük, ellenőrizze előfizetésének állapotát.</string>
     <string name="no_payment_methods">Nincs elmentve fizetési mód.</string>
     <string name="edit_payment_methods">Kérjük, a számlázási adatok szerkesztéséhez, lépjen be a protonmail.com weblapon.</string>
     <string name="message_not_loaded">Üzenet nincs betöltve</string>
@@ -491,12 +353,7 @@ Svájci székhellyel</string>
     <string name="delete_selected">Kijelöltek törlése</string>
     <string name="pin_not_activated">PIN kód nincs aktiválva</string>
     <string name="available_options">Elérhető műveletek</string>
-    <string name="current_recovery_email_">Jelenlegi visszaállító és értesítési e-mail</string>
     <string name="change_recovery_email">Visszaállító és értesítési e-mail megváltoztatása</string>
-    <string name="new_recovery_email_">Új visszaállító és értesítési e-mail</string>
-    <string name="confirm_new_recovery_email_">Visszaállító és értesítési e-mail megerősítése</string>
-    <string name="recovery_emails_invalid_">Az e-mail címek nem egyeznek meg vagy érvénytelenek</string>
-    <string name="authenticate_">Azonosítás</string>
     <string name="background_sync_subtitle">Bekapcsolásakor az alkalmazás a háttérben is szinkronizál a szerverrel. Kikapcsolása letiltja PUSH értesítéseket.</string>
     <string-array name="notification_options">
         <item>Nincs rezgés vagy hang</item>
@@ -746,7 +603,6 @@ Svájci székhellyel</string>
     <string name="contact_add_addr_to_group">Címek hozzáadása a csoporthoz</string>
     <string name="title_activity_address_chooser">Tagok kezelése</string>
     <string name="title_activity_account_manager">Fiókok kezelése</string>
-    <string name="title_activity_connect_account_">Fiók csatlakoztatása</string>
     <string name="account_manager_add_account">Fiók hozzáadása</string>
     <string name="account_manager_remove_all_accounts">Összes fiók eltávolítása</string>
     <string name="account_manager_note">Egyidejűleg korlátlan számú fizetett ProtonMail-fiókba és egy ingyenes fiókba jelentkezhet be.</string>
@@ -756,7 +612,6 @@ Svájci székhellyel</string>
     <string name="manage_accounts_user_loggedout">%s (kilépett)</string>
     <string name="manage_accounts_user_primary">%s (elsődleges)</string>
     <string name="account_manager_remove">Eltávolítás</string>
-    <string name="connect_account_login_title_">Jelentkezzen be a ProtonMail fiókjába</string>
     <string name="default_error_message">Hiba történt</string>
     <string name="no_contact_groups">Nincsenek névjegy csoportok</string>
     <string name="search_contacts_inside_group">Névjegyek keresése a csoportban</string>
@@ -949,7 +804,6 @@ Svájci székhellyel</string>
     <string name="connect_account_limit_subtitle">Nem adhat hozzá újabb ingyenes ProtonMail fiókot. Csak egy ingyenes ProtonMail fiók adható hozzá. Kérjük, jelentkezzen ki másik ingyenes fiókjáról, vagy frissítse egyik ingyenes fiókját fizetős fiókra.</string>
     <string name="switch_accounts_question">Fiók váltása?</string>
     <string name="switch_to_account">Váltás %s-ra</string>
-    <string name="login_failure_missing_keys">A hozzáadni kívánt fiók nem rendelkezik generált kulccsal. Kérjük, jelölje meg ezt a fiókot elsődleges fiókként, vagy jelentkezzen be a webes felületen, hogy kulcsot generálhasson, majd adja hozzá fiókját \"további fiókként\" az alkalmazáshoz.</string>
     <!-- endregion -->
     <!-- region Compose shortcut -->
     <string name="shortcut_compose">Compose</string>
