--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -21,20 +21,13 @@
     <string name="protonmail">ProtonMail</string>
     <string name="encrypted_emails">VERSLEUTELDE E-MAIL</string>
     <string name="secure_email_swiss">Veilige e-maildienst, gevestigd <br/> in Zwitserland</string>
-    <string name="decrypt_mailbox_"><b>Mailbox</b> Decoderen</string>
     <string name="decrypt">Decoderen</string>
-    <string name="user_sign_in_">Gebruikerslogin</string>
-    <string name="two_factor_sign_in_">Tweestapsverificatie</string>
-    <string name="sign_in_">Inloggen</string>
+    <string name="sign_in">Inloggen</string>
     <string name="sign_out">Uitloggen</string>
     <string name="sign_out_question">Weet u zeker dat u zich wilt afmelden?</string>
-    <string name="mailbox_password_">Mailbox-wachtwoord</string>
-    <string name="two_factor_code_">Tweestapsverificatiecode</string>
     <string name="processing_request">Uw verzoek wordt verwerkt</string>
     <!-- should check for html tag -->
     <string name="need_to_be_logged_in">U bent niet ingelogd!</string>
-    <string name="forgot_password_">Wachtwoord vergeten?</string>
-    <string name="reset_mailbox_password_">MAILBOX-WACHTWOORD OPNIEUW INSTELLEN</string>
     <string name="forgot_mailbox_password">Om uw mailbox-wachtwoord te resetten, gebruikt u de webversie van ProtonMail via protonmail.com</string>
     <!-- Toast messages -->
     <string name="error_chrome_disabled">Niet mogelijk om inhoud te laden. Activeer Chrome</string>
@@ -44,10 +37,7 @@
     <string name="no_more_messages">Geen berichten meer</string>
     <string name="mailbox_login_failure">Inloggen op de mailbox is mislukt</string>
     <string name="login_failure">Inloggen mislukt</string>
-    <string name="invalid_server_proof">Ongeldig server bewijs</string>
-    <string name="invalid_credentials">Inloggegevens ongeldig</string>
     <string name="incorrect_key_parameters">Onjuiste sleutelparameters</string>
-    <string name="invalid_mailbox_password">Ongeldig mailbox-wachtwoord</string>
     <string name="not_signed_up">U bent niet aangemeld voor de bètaversie van ProtonMail Android</string>
     <string name="no_network">Geen netwerkverbinding</string>
     <string name="no_network_queued">Netwerk niet beschikbaar, bericht in wachtrij geplaatst</string>
@@ -207,47 +197,18 @@
     <string name="enter">Invoeren</string>
     <string name="cancel">Annuleren</string>
     <string name="close">Sluiten</string>
-    <string name="change_password_">Wachtwoord wijzigen</string>
-    <string name="change_mailbox_password_">Wijzig mailbox-wachtwoord</string>
     <string name="eo_password_title">Wachtwoord instellen</string>
     <string name="eo_password_subtitle">Voer een wachtwoord in om dit bericht te versleutelen voor niet-ProtonMailgebruikers</string>
     <string name="eo_password_more_info">Meer informatie</string>
-    <string name="old_login_password_">Huidig loginwachtwoord</string>
-    <string name="new_login_password_">Nieuw wachtwoord</string>
-    <string name="confirm_new_login_password_">Bevestig nieuw wachtwoord</string>
-    <string name="new_mailbox_password_">Nieuw mailbox wachtwoord</string>
-    <string name="confirm_new_mailbox_password_">Bevestig nieuw mailbox wachtwoord</string>
     <string name="no_attachments">Geen bijlagen</string>
-    <string name="new_passwords_not_valid">Ongeldige invoer</string>
-    <string name="new_passwords_do_not_match">Nieuwe wachtwoorden komen niet overeen</string>
-    <string name="new_login_password_saved">Nieuw inlogwachtwoord opgeslagen</string>
-    <string name="new_mailbox_password_saved">Nieuw mailbox-wachtwoord opgeslagen</string>
     <string name="pin_lock_option_settings">App vergrendelingsopties</string>
     <string name="pin_lock_after">App vergrendelen na</string>
     <string name="lock_the_app">App vergrendelen</string>
     <string name="display_name_banned_chars">Ongeldige weergavenaam. \'&gt;\' en \'&lt;\' zijn niet toegestaan</string>
     <string name="cont">Doorgaan</string>
     <string name="reply_prefix_on">Aan</string>
-    <string name="create_new_account_">Account aanmaken</string>
-    <string name="setup_new_account">Account instellen</string>
-    <string name="create_account_">Account aanmaken</string>
-    <string name="create_passwords_">Wachtwoord instellen</string>
-    <string name="caps_username_">Gebruikersnaam</string>
-    <string name="caps_login_password_">Wachtwoord</string>
-    <string name="caps_confirm_password_">Wachtwoord bevestigen</string>
-    <string name="caps_optional_">*OPTIONEEL</string>
-    <string name="update_me_for_new_features_">Houd mij op de hoogte over nieuwe functies</string>
-    <string name="create_mailbox_password_">Wachtwoord aanmaken</string>
-    <string name="password_note_"><b>Opmerking:</b> Dit is nodig om uw berichten te versleutelen en te decoderen.
-        Raak dit wachtwoord niet kwijt, wij kunnen het niet voor u herstellen. Als u dit wachtwoord verliest, hebt u geen toegang meer tot uw berichten.</string>
-    <string name="username_note_"><b>Opmerking:</b> uw gebruikersnaam is tevens ook uw e-mailadres</string>
     <string name="terms_and_conditions">Door ProtonMail te gebruiken, ga je akkoord met onze\n
         <a href="https://protonmail.com/terms-and-conditions">Algemene voorwaarden</a> en <a href="https://protonmail.com/privacy-policy">privacybeleid</a></string>
-    <string name="encryption_setup_">Versleutelingsconfiguratie</string>
-    <string name="high_security_">Hoog beveiligingsniveau (2048 bit)</string>
-    <string name="current_standard_">De huidige standaard</string>
-    <string name="extreme_security_">Extreem beveiligingsniveau (4096 bit)</string>
-    <string name="highest_security_">Het hoogste niveau van versleuteling is beschikbaar.<b> Het instellen kan enkele minuten duren.</b></string>
     <string name="labels_title_apply">Labels toepassen</string>
     <string name="labels_title_add">Label toevoegen</string>
     <string name="labels_title">Labels</string>
@@ -286,15 +247,6 @@
     <string name="display_images">Afbeelding weergeven</string>
     <string name="retry">Opnieuw proberen</string>
     <string name="saving_failed_no_conn">Opslaan mislukt, geen verbinding</string>
-    <string name="username_is_available">%s is beschikbaar!</string>
-    <string name="username_is_not_available">%s is niet beschikbaar!</string>
-    <string name="username_is_too_long">Maximale lengte voor een gebruikersnaam is %d tekens!</string>
-    <string name="congratulation_">Gefeliciteerd!</string>
-    <string name="new_account_ready_">Uw nieuwe beveiligde e-mail\naccount is gebruiksklaar.</string>
-    <string name="optional_email_note_">Met optionele herstel-e-mailadres kunt u uw inlogwachtwoord
-        resetten als u deze bent vergeten.</string>
-    <string name="optional_display_name_">Wanneer u een e-mail verstuurt, is dit de naam
-        die bij \'afzender\' verschijnt.</string>
     <string name="close_engagement">sluit rondleiding</string>
     <string name="engagement_title_welcome">Welkom bij ProtonMail!</string>
     <string name="engagement_title_swipe">Snelle veegacties</string>
@@ -312,7 +264,6 @@
     <string name="attachment_exists">Bijlage reeds toegevoegd</string>
     <string name="sending_email_success">Verificatiecode is verzonden</string>
     <string name="sending_email_failed">Verificatiecode aanvraag mislukt</string>
-    <string name="password_not_valid_">U hebt een ongeldig wachtwoord ingevoerd</string>
     <string name="send_code_wait">Wacht %d seconden om opnieuw te klikken</string>
     <string name="eo_password_not_completed">Voer wachtwoord in.</string>
     <string name="delinquency_subtitle">Toegang tot dit account is geblokkeerd als gevolg van niet betaalde facturen. Gelieve aan te melden via protonmail.com om uw onbetaalde factuur te betalen.</string>
@@ -369,107 +320,20 @@
     <string name="log_out">%s uitloggen?</string>
     <string name="logout_question">Weet u zeker dat u wilt uitloggen?</string>
     <string name="logout_question_next_account">Weet u zeker dat u wilt uitloggen met huidige account en verder wilt gaan met %s?</string>
-    <string name="upselling_">Upgrade/doneren</string>
-    <string name="upselling_title_">ProtonMail is gratis en open source</string>
-    <string name="upselling_subtitle_">We hebben uw steun nodig voor het blijven beschermen van privacy en het verbeteren van ProtonMail</string>
-    <string name="upselling_donate_title_">Doneren</string>
-    <string name="upselling_upgrade_title_">Upgrade naar ProtonMail Plus</string>
-    <string name="upselling_donate_subtitle">Uw donatie helpt ons bij het uitbreiden van de capaciteit en om door te gaan met het ontwikkelen van ProtonMail als vrije en open source software. Alleen dankzij de steun die wij krijgen van de gemeenschap zijn wij in staat om door te gaan met het beschikbaar stellen van ProtonMail aan mensen over de hele wereld.</string>
-    <string name="upgrade_donate">Upgrade/Doneren</string>
-    <string name="upselling_donate_pick_amount_">Selecteer een bedrag of voer een bedrag in</string>
-    <string name="amount_5_">€ 5,-</string>
-    <string name="amount_15">€ 15,-</string>
-    <string name="amount_50">€ 50,-</string>
-    <string name="amount_100">€ 100,-</string>
-    <string name="donation_amount_">Voer een te doneren bedrag in</string>
-    <string name="donate_">Doneren</string>
-    <string name="donate_paypal_bitcoin_">Doneren via PayPal of Bitcoin</string>
-    <string name="upgrade_line1_">Alles van ons gratis plan</string>
-    <string name="upgrade_line2_">5 GB opslagruimte</string>
-    <string name="upgrade_line3_">Gebruik uw eigen domein</string>
-    <string name="upgrade_line4_">Maximaal 5 aliassen</string>
-    <string name="upgrade_line5_">Ondersteuning met hoge prioriteit</string>
     <string name="upgrade">Upgrade</string>
-    <string name="payment_options_">Betalingsmethode</string>
-    <string name="other_plans_">Voor abonnementen met meer opslagruimte, kunt u upgraden via de webmail interface van ProtonMail.</string>
-    <string name="upgrade_paid_user">Bedankt voor het zijn van een betalende gebruiker!</string>
-    <string name="select_account_type_">Accounttype selecteren</string>
-    <string name="select_account_type_subtitle_">ProtonMail is een gratis dienst.    U kunt de missie voor meer online privacy steunen door te kiezen voor een betaald account.</string>
-    <string name="plan_free_with_price_">GRATIS</string>
-    <string name="plan_plus_with_price_">PLUS %s / maand</string>
-    <string name="plan_visionary_with_price_">VISIONARY %s / maand</string>
-    <string name="plan_business_with_price_">BUSINESS %s / maand</string>
-    <string name="plan_free_title_">Basisaccount met beperkte functionaliteit</string>
-    <string name="plan_plus_title_">Veilige e-maildienst met geavanceerde functies</string>
-    <string name="plan_visionary_title_">Speciale e-mailaccounts voor de mensen die ons steunen</string>
-    <string name="plan_business_title_">Speciale e-mailaccounts voor de mensen die ons steunen</string>
-    <string name="plan_plus_line2_">Stuur tot maximaal 1000 berichten per dag</string>
-    <string name="plan_plus_line3_">Labels en geavanceerde filters</string>
-    <string name="plan_plus_line4_">Verstuur versleutelde berichten naar externe ontvangers</string>
-    <string name="plan_plus_line7_">Ondersteuning met hoge prioriteit</string>
-    <string name="plan_free_line1_">500 MB opslagruimte</string>
-    <string name="plan_free_line2_">150 berichten per dag</string>
-    <string name="plan_free_line3_">20 labels</string>
-    <string name="plan_free_line4_">Eigen domeinen: niet ondersteund</string>
-    <string name="plan_free_line5_">1 adres</string>
-    <string name="plan_free_line6_">Klantenservice: beperkt</string>
-    <string name="plan_visio_line2_">Geen verzendlimiet</string>
-    <string name="plan_visio_line3_">Vroegtijdige toegang tot de nieuwste functies</string>
-    <string name="plan_visio_line6_">Help mee met nieuwe functionaliteiten te kiezen via exclusieve Visionary enquêtes</string>
-    <string name="plan_business_line1_">komt binnenkort voor organisaties om van versleutelde e-mail te genieten!</string>
-    <string name="currency_duration_">Valuta &amp; Looptijd</string>
-    <string name="credit_card_name_">Naam op credit/debitkaart</string>
-    <string name="zip_code_">Postcode</string>
-    <string name="card_number_">Creditcardnummer</string>
-    <string name="billing_information_">Facturatiegegevens</string>
     <string name="country">Land</string>
-    <string name="cvc_">CVC-code</string>
-    <string name="terms_and_conditions_billing_">Door op Verzenden te klikken,
-    gaat u akkoord met\n<a href="https://protonmail.com/terms-and-conditions">ProtonMail\'s algemene voorwaarden</a></string>
-    <string name="submit_">Versturen</string>
-    <string name="currency_">Valuta</string>
-    <string name="plan_duration_">Betalingscyclus</string>
-    <string name="duration_annual_line1_">Jaarlijks <font color="#C3E129">bespaar 20%</font></string>
-    <string name="per_month_text_only_">per maand</string>
-    <string name="duration_annual_line3">Gefactureerd als %s per jaar</string>
-    <string name="duration_annual_line4">Gefactureerd als %s per maand</string>
-    <string name="duration_monthly_line1_">Maandelijks</string>
-    <string name="duration_monthly_line3">Bespaar 20%</string>
     <string name="set_cont">Opslaan</string>
-    <string name="payment_error_">Betalingsfout</string>
     <string name="error">Fout</string>
-    <string name="try_another_card">Probeer andere kaart</string>
-    <string name="try_another_paypal">Betalen met PayPal</string>
-    <string name="try_another_payment_method_">Probeer een andere</string>
-    <string name="submit_paypal_">Betalen met Paypal</string>
-    <string name="picker_card_">Krediet/ debietkaart</string>
-    <string name="picker_paypal_">PayPal</string>
-    <string name="paypal_disclaimer_">U moet inloggen op uw PayPal-account om deze transactie te voltooien. We openen een nieuw browservenster met PayPal voor u.</string>
-    <string name="payment_picker_disclaimer_">Selecteer een betaalwijze</string>
-    <string name="payment_success_title_">Betaling succesvol!</string>
-    <string name="payment_success_text_">We zijn nu bezig met het upgraden van uw account, even geduld alstublieft. Bedankt voor uw steun!</string>
-    <string name="donation_success_title">Donatie gelukt!</string>
-    <string name="donation_success_text">Uw steun is essentieel om ProtonMail te laten voortbestaan. Bedankt voor het steunen van privacy op internet!</string>
-    <string name="create_free_account_">Maak een gratis account aan</string>
     <string name="storage_gb">%d GB opslagruimte</string>
     <string name="storage_mb">%d MB opslagruimte</string>
     <string name="max_addresses">Maximaal %d e-mailaliassen</string>
     <string name="inline_prefix">[Inline]</string>
     <string name="inline_header">%d ingesloten afbeeldingen</string>
     <string name="select">Selecteren</string>
-    <string name="change_currency_">Wijzig valuta</string>
-    <string name="switch_billing_monthly_">Overstappen naar maandelijks</string>
-    <string name="switch_billing_yearly">Overstappen naar jaarlijks</string>
     <string name="warning">Waarschuwing</string>
     <string name="empty_recovery_email_question">Waarschuwing: u hebt geen herstel-e-mailadres ingesteld, hierdoor is accountherstel niet mogelijk als u uw wachtwoord vergeet. Doorgaan zonder herstel-e-mailadres?</string>
     <string name="card_details_title">%1$s (*** %2$s)</string>
     <string name="card_details_subtitle">Vervaldatum %s</string>
-    <string name="payment_methods_">Betaalmethodes</string>
-    <string name="payment_approval_activity">Goedkeuring van de betalingsmethode</string>
-    <string name="payment_approval_success">Betalingsmethode is goedgekeurd</string>
-    <string name="payment_approval_unknown_error_description">Er is een fout opgetreden tijdens het verifiëren van uw betalingsmethode. Probeer het opnieuw of schakel over naar een andere kaart.</string>
-    <string name="payment_approval_cancel_error_description">Betalingsmethode verificatie geannuleerd. Probeer het opnieuw of schakel over naar een andere kaart.</string>
-    <string name="payment_approval_consumed_error_description">Betaalmethode is al gebruikt voor deze betaling. Controleer de status van uw abonnement.</string>
     <string name="no_payment_methods">U heeft geen opgeslagen betalingsmethoden.</string>
     <string name="edit_payment_methods">Log in via protonmail.com om uw betalingsgegevens bij te werken.</string>
     <string name="message_not_loaded">Bericht niet geladen</string>
@@ -488,12 +352,7 @@
     <string name="delete_selected">Verwijder geselecteerde</string>
     <string name="pin_not_activated">PIN-code niet geactiveerd</string>
     <string name="available_options">Beschikbare opties</string>
-    <string name="current_recovery_email_">Huidig herstel-e-mailadres</string>
     <string name="change_recovery_email">Wijzig herstel-e-mailadres</string>
-    <string name="new_recovery_email_">Nieuw herstel-e-mailadres</string>
-    <string name="confirm_new_recovery_email_">Bevestig nieuw herstel-e-mailadres</string>
-    <string name="recovery_emails_invalid_">E-mailadres komt niet overeen of is ongeldig</string>
-    <string name="authenticate_">Authenticeren</string>
     <string name="background_sync_subtitle">Als deze instelling ingeschakeld is, synchroniseert de app op de achtergrond met de server. Het uitschakelen van deze instelling schakelt pushmeldingen uit.</string>
     <string-array name="notification_options">
         <item>Geen trilling of geluid</item>
@@ -743,7 +602,6 @@
     <string name="contact_add_addr_to_group">Adres toevoegen aan groepen</string>
     <string name="title_activity_address_chooser">Adressen beheren</string>
     <string name="title_activity_account_manager">Accounts beheren</string>
-    <string name="title_activity_connect_account_">Verbind Account</string>
     <string name="account_manager_add_account">Account toevoegen</string>
     <string name="account_manager_remove_all_accounts">Alle accounts verwijderen</string>
     <string name="account_manager_note">U kunt tegelijkertijd aanmelden bij één gratis account en een onbeperkt aantal betaalde ProtonMail accounts.</string>
@@ -753,7 +611,6 @@
     <string name="manage_accounts_user_loggedout">%s (uitgelogd)</string>
     <string name="manage_accounts_user_primary">%s (primair)</string>
     <string name="account_manager_remove">Verwijderen</string>
-    <string name="connect_account_login_title_">Inloggen op uw ProtonMail account</string>
     <string name="default_error_message">Er is iets fout gegaan</string>
     <string name="no_contact_groups">Geen contactgroepen</string>
     <string name="search_contacts_inside_group">Zoeken naar contacten binnen groep</string>
@@ -946,7 +803,6 @@
     <string name="connect_account_limit_subtitle">U kunt geen andere gratis ProtonMail account toevoegen. Slechts één gratis ProtonMail account kan worden toegevoegd. Log uit van uw andere gratis account of upgrade een van uw gratis accounts naar een betaald account.</string>
     <string name="switch_accounts_question">Van account wisselen?</string>
     <string name="switch_to_account">Wisselen naar %s</string>
-    <string name="login_failure_missing_keys">Het account dat u probeert toe te voegen heeft geen gegenereerde sleutels. Voeg dit account toe als eerste account op de app, of log in via de webversie, om sleutels te genereren en voeg het dan toe als een extra account in de app.</string>
     <!-- endregion -->
     <!-- region Compose shortcut -->
     <string name="shortcut_compose">Opstellen</string>
