--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -21,20 +21,13 @@
     <string name="protonmail">ProtonMail</string>
     <string name="encrypted_emails">SZYFROWANA POCZTA E-MAIL</string>
     <string name="secure_email_swiss">Bezpieczna poczta e-mail ulokowana\nw Szwajcarii</string>
-    <string name="decrypt_mailbox_">Odszyfruj <b>skrzynkę pocztową</b></string>
     <string name="decrypt">Odszyfruj</string>
-    <string name="user_sign_in_">Logowanie użytkownika</string>
-    <string name="two_factor_sign_in_">Uwierzytelnianie dwustopniowe</string>
-    <string name="sign_in_">Zaloguj się</string>
+    <string name="sign_in">Zaloguj się</string>
     <string name="sign_out">Wyloguj</string>
     <string name="sign_out_question">Czy na pewno chcesz się wylogować?</string>
-    <string name="mailbox_password_">Hasło skrzynki pocztowej</string>
-    <string name="two_factor_code_">Kod uwierzytelniający</string>
     <string name="processing_request">Żądanie jest przetwarzane</string>
     <!-- should check for html tag -->
     <string name="need_to_be_logged_in">Nie jesteś zalogowany!</string>
-    <string name="forgot_password_">Nie pamiętasz hasła?</string>
-    <string name="reset_mailbox_password_">ZRESETUJ HASŁO SKRZYNKI POCZTOWEJ</string>
     <string name="forgot_mailbox_password">Aby zresetować hasło skrzynki pocztowej, skorzystaj ze strony protonmail.com</string>
     <!-- Toast messages -->
     <string name="error_chrome_disabled">Nie można załadować zawartości. Włącz przeglądarkę Chrome</string>
@@ -44,10 +37,7 @@
     <string name="no_more_messages">Nie ma więcej wiadomości</string>
     <string name="mailbox_login_failure">Logowanie do skrzynki pocztowej nie powiodło się</string>
     <string name="login_failure">Logowanie nie powiodło się</string>
-    <string name="invalid_server_proof">Certyfikat serwera jest nieprawidłowy</string>
-    <string name="invalid_credentials">Dane logowania są nieprawidłowe</string>
     <string name="incorrect_key_parameters">Parametry klucza są nieprawidłowe</string>
-    <string name="invalid_mailbox_password">Hasło skrzynki pocztowej jest nieprawidłowe</string>
     <string name="not_signed_up">Nie jesteś zapisany do aplikacji ProtonMail w wersji Beta</string>
     <string name="no_network">Brak połączenia z siecią</string>
     <string name="no_network_queued">Brak połączenia z siecią. Wiadomości zostały dodane do kolejki</string>
@@ -217,47 +207,18 @@
     <string name="enter">Wpisz</string>
     <string name="cancel">Anuluj</string>
     <string name="close">Zamknij</string>
-    <string name="change_password_">Zmień hasło</string>
-    <string name="change_mailbox_password_">Zmień hasło skrzynki pocztowej</string>
     <string name="eo_password_title">Ustaw hasło</string>
     <string name="eo_password_subtitle">Ustaw hasło, aby zaszyfrować tę wiadomość dla użytkowników spoza ProtonMaila</string>
     <string name="eo_password_more_info">Więcej informacji</string>
-    <string name="old_login_password_">Obecne hasło logowania</string>
-    <string name="new_login_password_">Nowe hasło</string>
-    <string name="confirm_new_login_password_">Potwierdź nowe hasło</string>
-    <string name="new_mailbox_password_">Nowe hasło skrzynki pocztowej</string>
-    <string name="confirm_new_mailbox_password_">Potwierdź nowe hasło skrzynki pocztowej</string>
     <string name="no_attachments">0 załączników</string>
-    <string name="new_passwords_not_valid">Dane wejściowe są nieprawidłowe</string>
-    <string name="new_passwords_do_not_match">Nowe hasła nie pasują do siebie</string>
-    <string name="new_login_password_saved">Nowe hasło logowania zostało zapisane</string>
-    <string name="new_mailbox_password_saved">Nowe hasło skrzynki pocztowej zostało zapisane</string>
     <string name="pin_lock_option_settings">Ustawienia blokady aplikacji</string>
     <string name="pin_lock_after">Zablokuj aplikację po</string>
     <string name="lock_the_app">Zablokuj aplikację</string>
     <string name="display_name_banned_chars">Nazwa wyświetlana jest nieprawidłowa. \'&gt;\' i \'&lt;\' są niedozwolone</string>
     <string name="cont">Kontynuuj</string>
     <string name="reply_prefix_on">‎</string>
-    <string name="create_new_account_">Utwórz konto</string>
-    <string name="setup_new_account">Skonfiguruj swoje konto</string>
-    <string name="create_account_">Utwórz konto</string>
-    <string name="create_passwords_">Ustaw hasło</string>
-    <string name="caps_username_">Nazwa użytkownika</string>
-    <string name="caps_login_password_">Hasło</string>
-    <string name="caps_confirm_password_">Potwierdź hasło</string>
-    <string name="caps_optional_">*OPCJONALNIE</string>
-    <string name="update_me_for_new_features_">Informuj mnie o nowych funkcjach</string>
-    <string name="create_mailbox_password_">Utwórz hasło</string>
-    <string name="password_note_"><b>Uwaga:</b> Służy do szyfrowania i odszyfrowywania Twoich wiadomości.
-        Nie strać tego hasła - nie możemy go odzyskać. Jeśli je zgubisz, nie będziesz w stanie odczytać swoich wiadomości.</string>
-    <string name="username_note_"><b>Uwaga:</b> Nazwa użytkownika jest również Twoim adresem ProtonMail</string>
     <string name="terms_and_conditions">Korzystając z poczty ProtonMail, akceptujesz nasz\n
         <a href="https://protonmail.com/terms-and-conditions">regulamin</a> oraz <a href="https://protonmail.com/privacy-policy">politykę prywatności</a></string>
-    <string name="encryption_setup_">Konfiguracja szyfrowania</string>
-    <string name="high_security_">Wysoki poziom bezpieczeństwa (2048 bitów)</string>
-    <string name="current_standard_">Obecny standard</string>
-    <string name="extreme_security_">Najwyższe bezpieczeństwo (4096 bitów)</string>
-    <string name="highest_security_">Najwyższy możliwy poziom szyfrowania.<b> Ustawienie może zająć kilka minut.</b></string>
     <string name="labels_title_apply">Zastosuj etykiety</string>
     <string name="labels_title_add">Dodaj etykietę</string>
     <string name="labels_title">Etykiety</string>
@@ -296,15 +257,6 @@
     <string name="display_images">Pokaż zawartość zdalną</string>
     <string name="retry">Spróbuj ponownie</string>
     <string name="saving_failed_no_conn">Zapisywanie nie powiodło się. Brak połączenia z Internetem</string>
-    <string name="username_is_available">Nazwa użytkownika jest dostępna!</string>
-    <string name="username_is_not_available">Nazwa użytkownika jest już zajęta!</string>
-    <string name="username_is_too_long">Maksymalna długość nazwy użytkownika to %d znaków!</string>
-    <string name="congratulation_">Gratulacje!</string>
-    <string name="new_account_ready_">Twoje nowe bezpieczne konto\ne-mail jest gotowe.</string>
-    <string name="optional_email_note_">Opcjonalny adres pomocniczy pozwoli Ci
-zresetować hasło logowania, jeśli je zapomnisz.</string>
-    <string name="optional_display_name_">Po wysłaniu wiadomości ta nazwa
-        pojawi się w polu nadawcy.</string>
     <string name="close_engagement">zamknij przewodnik</string>
     <string name="engagement_title_welcome">Witaj w ProtonMail!</string>
     <string name="engagement_title_swipe">Szybkie gesty</string>
@@ -322,7 +274,6 @@ zresetować hasło logowania, jeśli je zapomnisz.</string>
     <string name="attachment_exists">Załącznik został już dołączony</string>
     <string name="sending_email_success">Kod weryfikacyjny został wysłany</string>
     <string name="sending_email_failed">Wysyłanie kodu weryfikującego nie powiodło się</string>
-    <string name="password_not_valid_">Wpisane hasło nie jest prawidłowe</string>
     <string name="send_code_wait">Poczekaj %d sekund, zanim klikniesz ponownie</string>
     <string name="eo_password_not_completed">Hasło wiadomości nie zostało ustawione.</string>
     <string name="delinquency_subtitle">Dostęp do tego konta jest wyłączony z powodu braku płatności. Zaloguj się za pomocą protonmail.com, aby zapłacić zaległe faktury.</string>
@@ -383,109 +334,20 @@ zresetować hasło logowania, jeśli je zapomnisz.</string>
     <string name="log_out">Wylogować się z konta %s?</string>
     <string name="logout_question">Czy na pewno chcesz się wylogować?</string>
     <string name="logout_question_next_account">Zostaniesz przełączony na konto %s.</string>
-    <string name="upselling_">Ulepsz konto/Wspomóż nas</string>
-    <string name="upselling_title_">ProtonMail jest darmowym i otwartym oprogramowaniem</string>
-    <string name="upselling_subtitle_">Potrzebujemy Twojego wsparcia, aby móc chronić prywatność i udoskonalać ProtonMaila</string>
-    <string name="upselling_donate_title_">Wspomóż nas</string>
-    <string name="upselling_upgrade_title_">Ulepsz do planu ProtonMail Plus</string>
-    <string name="upselling_donate_subtitle">Twoja darowizna pozwoli nam zwiększyć
-    przestrzeń dyskową oraz rozwijać ProtonMaila jako darmowe i otwarte oprogramowanie.
-    Tylko dzięki wsparciu społeczności, możemy w dalszym ciągu dostarczać ProtonMaila
-    ludziom na całym świecie.</string>
-    <string name="upgrade_donate">Ulepsz konto/Wspomóż nas</string>
-    <string name="upselling_donate_pick_amount_">Wybierz kwotę darowizny lub wpisz dowolną kwotę</string>
-    <string name="amount_5_">5€</string>
-    <string name="amount_15">15€</string>
-    <string name="amount_50">50€</string>
-    <string name="amount_100">100€</string>
-    <string name="donation_amount_">Wpisz kwotę darowizny</string>
-    <string name="donate_">Wspomóż nas</string>
-    <string name="donate_paypal_bitcoin_">Darowizna przez PayPal lub Bitcoin</string>
-    <string name="upgrade_line1_">Wszystko zawarte w naszym planie Free</string>
-    <string name="upgrade_line2_">5 GB przestrzeni dyskowej</string>
-    <string name="upgrade_line3_">Korzystaj z własnej domeny</string>
-    <string name="upgrade_line4_">Do 5 aliasów e-mail</string>
-    <string name="upgrade_line5_">Priorytetowe wsparcie klienta</string>
     <string name="upgrade">Ulepsz</string>
-    <string name="payment_options_">Metoda płatności</string>
-    <string name="other_plans_">Uruchom plan z większą ilością przestrzeni dyskowej za pośrednictwem strony ProtonMaila.</string>
-    <string name="upgrade_paid_user">Dziękujemy za uruchomienie płatnego konta!</string>
-    <string name="select_account_type_">Wybierz typ konta</string>
-    <string name="select_account_type_subtitle_">ProtonMail to darmowa usługa dla dobra publicznego. Wybierając płatne konto, wspierasz ochronę prywatności w sieci.</string>
-    <string name="plan_free_with_price_">FREE</string>
-    <string name="plan_plus_with_price_">PLUS %s / miesiąc</string>
-    <string name="plan_visionary_with_price_">VISIONARY %s / miesiąc</string>
-    <string name="plan_business_with_price_">BUSINESS %s / miesiąc</string>
-    <string name="plan_free_title_">Podstawowe konto z ograniczoną liczbą funkcji</string>
-    <string name="plan_plus_title_">Bezpieczna poczta e-mail z zaawansowanymi funkcjami</string>
-    <string name="plan_visionary_title_">Specjalne konta dla naszych darczyńców</string>
-    <string name="plan_business_title_">Specjalne konta dla naszych darczyńców</string>
-    <string name="plan_plus_line2_">Wysyłaj do 1000 wiadomości dziennie</string>
-    <string name="plan_plus_line3_">Etykiety i filtry niestandardowe</string>
-    <string name="plan_plus_line4_">Wysyłaj zaszyfrowane wiadomości do odbiorców zewnętrznych</string>
-    <string name="plan_plus_line7_">Priorytetowe wsparcie klienta</string>
-    <string name="plan_free_line1_">500 MB przestrzeni dyskowej</string>
-    <string name="plan_free_line2_">150 wiadomości dziennie</string>
-    <string name="plan_free_line3_">20 etykiet</string>
-    <string name="plan_free_line4_">Niestandardowe domeny: nie są obsługiwane</string>
-    <string name="plan_free_line5_">1 adres</string>
-    <string name="plan_free_line6_">Wsparcie klienta: ograniczone</string>
-    <string name="plan_visio_line2_">Brak limitów wysyłania</string>
-    <string name="plan_visio_line3_">Wcześniejszy dostęp do nowych funkcji</string>
-    <string name="plan_visio_line6_">Pomóż nam wybrać nowe funkcje przez ankietę dostępną dla kont Visionary</string>
-    <string name="plan_business_line1_">wkrótce bezpieczna usługa e-mail dla organizacji!</string>
-    <string name="currency_duration_">Waluta i czas trwania</string>
-    <string name="credit_card_name_">Właściciel karty</string>
-    <string name="zip_code_">Kod pocztowy</string>
-    <string name="card_number_">Numer karty</string>
-    <string name="billing_information_">Informacje o płatności</string>
     <string name="country">Kraj</string>
-    <string name="cvc_">CVC</string>
-    <string name="terms_and_conditions_billing_">Klikając przycisk Wyślij, akceptujesz\n<a href="https://protonmail.com/terms-and-conditions">regulamin ProtonMaila</a></string>
-    <string name="submit_">Wyślij</string>
-    <string name="currency_">Waluta</string>
-    <string name="plan_duration_">Cykl rozliczeniowy</string>
-    <string name="duration_annual_line1_">Plan roczny <font color="#C3E129">Zaoszczędź 20%</font></string>
-    <string name="per_month_text_only_">miesięcznie</string>
-    <string name="duration_annual_line3">Płatne jako %s / rok</string>
-    <string name="duration_annual_line4">Płatne %s / miesiąc</string>
-    <string name="duration_monthly_line1_">Plan miesięczny</string>
-    <string name="duration_monthly_line3">Zaoszczędź 20%</string>
     <string name="set_cont">Zapisz i kontynuuj</string>
-    <string name="payment_error_">Błąd płatności</string>
     <string name="error">Błąd</string>
-    <string name="try_another_card">Spróbuj użyć innej karty</string>
-    <string name="try_another_paypal">Zapłać przez PayPal</string>
-    <string name="try_another_payment_method_">Spróbuj użyć innej metody</string>
-    <string name="submit_paypal_">Zapłać przez PayPal</string>
-    <string name="picker_card_">Karta płatnicza</string>
-    <string name="picker_paypal_">PayPal</string>
-    <string name="paypal_disclaimer_">Musisz zalogować się do konta PayPal, aby dokończyć tę transakcję. Strona otworzy się w nowej karcie przeglądarki.</string>
-    <string name="payment_picker_disclaimer_">Wybierz typ płatności</string>
-    <string name="payment_success_title_">Zapłacono pomyślnie!</string>
-    <string name="payment_success_text_">Ulepszamy teraz Twoje konto, poczekaj chwilę. Dziękujemy za Twoje wsparcie!</string>
-    <string name="donation_success_title">Darowizna została przekazana!</string>
-    <string name="donation_success_text">Twoja pomoc jest niezbędna do funkcjonowania poczty ProtonMail. Dziękujemy za wsparcie prywatności w Internecie!</string>
-    <string name="create_free_account_">Utwórz darmowe konto</string>
     <string name="storage_gb">%d GB przestrzeni dyskowej</string>
     <string name="storage_mb">%d MB przestrzeni dyskowej</string>
     <string name="max_addresses">Do %d aliasów e-mail</string>
     <string name="inline_prefix">[Inline]</string>
     <string name="inline_header">Osadzone obrazy w wiadomości: %d</string>
     <string name="select">Zaznacz</string>
-    <string name="change_currency_">Zmień walutę</string>
-    <string name="switch_billing_monthly_">Zmień na plan miesięczny</string>
-    <string name="switch_billing_yearly">Zmień na plan roczny</string>
     <string name="warning">Ostrzeżenie</string>
     <string name="empty_recovery_email_question">Ostrzeżenie: Nie dodałeś adresu pomocniczego. Jeśli zapomnisz hasła, to nie odzyskasz już swojego konta. Czy chcesz przejść dalej bez wpisywania tego adresu?</string>
     <string name="card_details_title">%1$s (*** %2$s)</string>
     <string name="card_details_subtitle">Data ważności %s</string>
-    <string name="payment_methods_">Metody płatności</string>
-    <string name="payment_approval_activity">Metoda płatności została zatwierdzona</string>
-    <string name="payment_approval_success">Metoda płatności została zatwierdzona</string>
-    <string name="payment_approval_unknown_error_description">Wystąpił błąd podczas weryfikowania płatności. Spróbuj ponownie lub zmień kartę.</string>
-    <string name="payment_approval_cancel_error_description">Weryfikacja płatności została anulowana. Spróbuj ponownie lub zmień kartę.</string>
-    <string name="payment_approval_consumed_error_description">Płatność została już wykorzystana. Sprawdź status subskrypcji.</string>
     <string name="no_payment_methods">Nie posiadasz zapisanych metod płatności.</string>
     <string name="edit_payment_methods">Zaloguj się przez protonmail.com, aby edytować informacje dotyczące płatności.</string>
     <string name="message_not_loaded">Wiadomość nie została załadowana</string>
@@ -504,12 +366,7 @@ zresetować hasło logowania, jeśli je zapomnisz.</string>
     <string name="delete_selected">Usuń zaznaczone</string>
     <string name="pin_not_activated">Kod PIN nie został aktywowany</string>
     <string name="available_options">Dostępne opcje</string>
-    <string name="current_recovery_email_">Obecny adres odzyskiwania/powiadomień</string>
     <string name="change_recovery_email">Zmień adres odzyskiwania/powiadomień</string>
-    <string name="new_recovery_email_">Nowy adres odzyskiwania/powiadomień</string>
-    <string name="confirm_new_recovery_email_">Potwierdź nowy adres odzyskiwania/powiadomień</string>
-    <string name="recovery_emails_invalid_">Adres e-mail nie jest zgodny lub nie istnieje</string>
-    <string name="authenticate_">Uwierzytelnij</string>
     <string name="background_sync_subtitle">Jeśli włączysz tę opcję, aplikacja będzie synchronizować się w tle. W przeciwnym wypadku powiadomienia push zostaną wyłączone.</string>
     <string-array name="notification_options">
         <item>Brak wibracji lub dźwięku</item>
@@ -759,7 +616,6 @@ zresetować hasło logowania, jeśli je zapomnisz.</string>
     <string name="contact_add_addr_to_group">Dodaj adres do grup</string>
     <string name="title_activity_address_chooser">Zarządzaj adresami</string>
     <string name="title_activity_account_manager">Zarządzaj kontami</string>
-    <string name="title_activity_connect_account_">Połącz konto</string>
     <string name="account_manager_add_account">Dodaj konto</string>
     <string name="account_manager_remove_all_accounts">Trwa usuwanie wszystkich kont</string>
     <string name="account_manager_note">Możesz być jednocześnie zalogowany na nieograniczoną liczbę płatnych kont ProtonMail i jedno bezpłatne konto.</string>
@@ -769,7 +625,6 @@ zresetować hasło logowania, jeśli je zapomnisz.</string>
     <string name="manage_accounts_user_loggedout">%s (wylogowany)</string>
     <string name="manage_accounts_user_primary">%s (główne)</string>
     <string name="account_manager_remove">Usuń</string>
-    <string name="connect_account_login_title_">Zaloguj się do konta ProtonMail</string>
     <string name="default_error_message">Wystąpił błąd</string>
     <string name="no_contact_groups">Brak grup kontaktów</string>
     <string name="search_contacts_inside_group">Szukaj kontaktów wewnątrz grupy</string>
@@ -978,7 +833,6 @@ zresetować hasło logowania, jeśli je zapomnisz.</string>
     <string name="connect_account_limit_subtitle">Możesz dodać tylko jedno darmowe konto. Wyloguj się z darmowego konta lub ulepsz je do płatnego konta.</string>
     <string name="switch_accounts_question">Przełączyć konto?</string>
     <string name="switch_to_account">Zostaniesz przełączony na konto %s</string>
-    <string name="login_failure_missing_keys">Konto, które próbujesz dodać, nie posiada wygenerowanych kluczy. Dodaj je jako główne konto w aplikacji lub zaloguj się do wersji przeglądarkowej, aby wygenerować brakujące klucze.</string>
     <!-- endregion -->
     <!-- region Compose shortcut -->
     <string name="shortcut_compose">Napisz</string>
