--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -21,20 +21,13 @@
     <string name="protonmail">ProtonMail</string>
     <string name="encrypted_emails">CORREO ELECTRÓNICO CIFRADO</string>
     <string name="secure_email_swiss">Correo electrónico seguro con sede <br/> en Suiza</string>
-    <string name="decrypt_mailbox_">Descifrar <b>Buzón</b></string>
     <string name="decrypt">Descifrar</string>
-    <string name="user_sign_in_">Inicio de sesión</string>
-    <string name="two_factor_sign_in_">Autenticación de doble factor</string>
-    <string name="sign_in_">Iniciar sesión</string>
+    <string name="sign_in">Iniciar sesión</string>
     <string name="sign_out">Cerrar sesión</string>
     <string name="sign_out_question">¿Está seguro de que quiere cerrar sesión?</string>
-    <string name="mailbox_password_">Contraseña del buzón</string>
-    <string name="two_factor_code_">Código de doble factor</string>
     <string name="processing_request">Su solicitud se está procesando</string>
     <!-- should check for html tag -->
     <string name="need_to_be_logged_in">¡No ha iniciado sesión!</string>
-    <string name="forgot_password_">¿Olvidó su contraseña?</string>
-    <string name="reset_mailbox_password_">RESTABLECER CONTRASEÑA DEL BUZÓN</string>
     <string name="forgot_mailbox_password">Para restablecer la contraseña de su buzón, utilice la versión web de ProtonMail en protonmail.com</string>
     <!-- Toast messages -->
     <string name="error_chrome_disabled">No se pudo cargar el contenido. Active Chrome</string>
@@ -44,10 +37,7 @@
     <string name="no_more_messages">No hay más mensajes</string>
     <string name="mailbox_login_failure">Error al iniciar sesión en el buzón</string>
     <string name="login_failure">Error al iniciar sesión</string>
-    <string name="invalid_server_proof">Prueba de servidor inválida</string>
-    <string name="invalid_credentials">Credenciales inválidas</string>
     <string name="incorrect_key_parameters">Parámetros clave incorrectos</string>
-    <string name="invalid_mailbox_password">Contraseña del buzón inválida</string>
     <string name="not_signed_up">No estás registrado en la Beta de ProtonMail para Android</string>
     <string name="no_network">Sin conexión</string>
     <string name="no_network_queued">No hay conexión, mensaje en espera</string>
@@ -207,47 +197,18 @@
     <string name="enter">Ingresar</string>
     <string name="cancel">Cancelar</string>
     <string name="close">Cerrar</string>
-    <string name="change_password_">Cambiar contraseña</string>
-    <string name="change_mailbox_password_">Cambiar contraseña del buzón</string>
     <string name="eo_password_title">Establecer contraseña</string>
     <string name="eo_password_subtitle">Establecezca una contraseña para cifrar este mensaje para usuarios que no sean de ProtonMail</string>
     <string name="eo_password_more_info">Obtener más información</string>
-    <string name="old_login_password_">Contraseña de inicio de sesión actual</string>
-    <string name="new_login_password_">Nueva contraseña</string>
-    <string name="confirm_new_login_password_">Confirmar nueva contraseña</string>
-    <string name="new_mailbox_password_">Nueva contraseña del buzón</string>
-    <string name="confirm_new_mailbox_password_">Confirmar nueva contraseña del buzón</string>
     <string name="no_attachments">0 archivos adjuntos</string>
-    <string name="new_passwords_not_valid">Entrada inválida</string>
-    <string name="new_passwords_do_not_match">Las contraseñas nuevas no coinciden</string>
-    <string name="new_login_password_saved">Nueva contraseña de inicio de sesión guardada</string>
-    <string name="new_mailbox_password_saved">Nueva contraseña del buzón guardada</string>
     <string name="pin_lock_option_settings">Opciones de bloqueo de la aplicación</string>
     <string name="pin_lock_after">Bloquear la aplicación después de</string>
     <string name="lock_the_app">Bloquear la aplicación</string>
     <string name="display_name_banned_chars">Nombre inválido. \'&gt;\' y \'&lt;\' no están permitidos</string>
     <string name="cont">Continuar</string>
     <string name="reply_prefix_on">On</string>
-    <string name="create_new_account_">Crear una cuenta nueva</string>
-    <string name="setup_new_account">Configurar su cuenta</string>
-    <string name="create_account_">Crear cuenta</string>
-    <string name="create_passwords_">Configurar la contraseña</string>
-    <string name="caps_username_">Nombre de usuario</string>
-    <string name="caps_login_password_">Contraseña</string>
-    <string name="caps_confirm_password_">Confirmar contraseña</string>
-    <string name="caps_optional_">*OPCIONAL</string>
-    <string name="update_me_for_new_features_">Mantenerme actualizado acerca de nuevas funciones</string>
-    <string name="create_mailbox_password_">Crear contraseña</string>
-    <string name="password_note_"><b>Nota:</b> Esto se utiliza para cifrar y descifrar tus mensajes.
-         No pierdas esta contraseña, no podremos recuperarla. Si pierdes tu contraseña, no podrás leer tus correos electrónicos.</string>
-    <string name="username_note_"><b>Nota:</b> El nombre de usuario también es tu dirección de ProtonMail</string>
     <string name="terms_and_conditions">Al usar ProtonMail, aceptas nuestros\n
          <a href="https://protonmail.com/terms-and-conditions">términos y condiciones</a> y la <a href="https://protonmail.com/privacy-policy">política de privacidad</a></string>
-    <string name="encryption_setup_">Configuración de cifrado</string>
-    <string name="high_security_">Alta seguridad (2048 bit)</string>
-    <string name="current_standard_">El estándar actual</string>
-    <string name="extreme_security_">Máxima seguridad (4096 bit)</string>
-    <string name="highest_security_">El nivel más alto de cifrado disponible.<b> Puede tardar varios minutos en configurarse.</b></string>
     <string name="labels_title_apply">Aplicar etiquetas</string>
     <string name="labels_title_add">Añadir etiquetas</string>
     <string name="labels_title">Etiquetas</string>
@@ -286,15 +247,6 @@
     <string name="display_images">Mostrar imágenes</string>
     <string name="retry">Reintentar</string>
     <string name="saving_failed_no_conn">Error al guardar, no hay conexión</string>
-    <string name="username_is_available">¡%s está disponible!</string>
-    <string name="username_is_not_available">¡%s NO está disponible!</string>
-    <string name="username_is_too_long">¡La longitud máxima para un nombre de usuario es %d caracteres!</string>
-    <string name="congratulation_">¡Felicidades!</string>
-    <string name="new_account_ready_">Su nueva cuenta de correo\nseguro está lista.</string>
-    <string name="optional_email_note_">La dirección de email de recuperación opcional le permite
-         restablecer su contraseña de acceso si la olvida.</string>
-    <string name="optional_display_name_">Cuando envía un email, este es el nombre que se
-         muestra en el campo remitente.</string>
     <string name="close_engagement">cerrar recorrido</string>
     <string name="engagement_title_welcome">¡Bienvenido/a a ProtonMail!</string>
     <string name="engagement_title_swipe">Acciones de desplazamiento rápido</string>
@@ -312,7 +264,6 @@
     <string name="attachment_exists">Archivo ya adjuntado</string>
     <string name="sending_email_success">Código de verificación enviado</string>
     <string name="sending_email_failed">Error al enviar el código de verificación</string>
-    <string name="password_not_valid_">La contraseña ingresada es inválida</string>
     <string name="send_code_wait">Espere %d segundos para volver a hacer clic</string>
     <string name="eo_password_not_completed">Contraseña del mensaje incompleta.</string>
     <string name="delinquency_subtitle">El acceso a esta cuenta se ha deshabilitado por falta de pago. Inicia sesión a través de protonmail.com para pagar tu factura pendiente.</string>
@@ -369,112 +320,20 @@
     <string name="log_out">¿Cerrar sesión %s?</string>
     <string name="logout_question">¿Seguro que quiere cerrar la sesión?</string>
     <string name="logout_question_next_account">¿Está seguro que desea cerrar sesión de la cuenta actual y continuar usando %s?</string>
-    <string name="upselling_">Mejorar/Donar</string>
-    <string name="upselling_title_">ProtonMail es gratuito y de código abierto</string>
-    <string name="upselling_subtitle_">Necesitamos su apoyo para continuar protegiendo la privacidad y mejorar ProtonMail</string>
-    <string name="upselling_donate_title_">Donar</string>
-    <string name="upselling_upgrade_title_">Mejorar a ProtonMail Plus</string>
-    <string name="upselling_donate_subtitle">Su donación nos ayudará a añadir
-     capacidad y seguir desarrollando ProtonMail como software libre y de código abierto. Sólo mediante el
-     apoyo de la comunidad somos capaces de continuar proporcionando ProtonMail a la gente alrededor
-     del mundo.</string>
-    <string name="upgrade_donate">Mejorar/Donar</string>
-    <string name="upselling_donate_pick_amount_">Seleccione un monto de donación o ingrese cualquier monto</string>
-    <string name="amount_5_">5€</string>
-    <string name="amount_15">15€</string>
-    <string name="amount_50">50€</string>
-    <string name="amount_100">100€</string>
-    <string name="donation_amount_">Ingrese el monto de la donación</string>
-    <string name="donate_">Donar</string>
-    <string name="donate_paypal_bitcoin_">Donar mediante PayPal o Bitcoin</string>
-    <string name="upgrade_line1_">Todo lo incluido en nuestro plan Gratuito</string>
-    <string name="upgrade_line2_">5 GB de almacenamiento</string>
-    <string name="upgrade_line3_">Use su propio dominio</string>
-    <string name="upgrade_line4_">Hasta 5 alias</string>
-    <string name="upgrade_line5_">Soporte prioritario</string>
     <string name="upgrade">Mejorar</string>
-    <string name="payment_options_">Opciones de pago</string>
-    <string name="other_plans_">Para planes con más espacio de almacenamiento,
-     actualice desde la versión web de ProtonMail.</string>
-    <string name="upgrade_paid_user">¡Gracias por ser un usuario de pago!</string>
-    <string name="select_account_type_">Selecciona tu tipo de cuenta</string>
-    <string name="select_account_type_subtitle_">ProtonMail es un servicio gratuito
-    para el bien general. Puede ayudar a proteger la privacidad en línea seleccionando una cuenta de pago.</string>
-    <string name="plan_free_with_price_">GRATUITO</string>
-    <string name="plan_plus_with_price_">PLUS %s /Mes</string>
-    <string name="plan_visionary_with_price_">VISIONARY %s /Mes</string>
-    <string name="plan_business_with_price_">BUSINESS %s /Mes</string>
-    <string name="plan_free_title_">Cuenta básica con funciones limitadas</string>
-    <string name="plan_plus_title_">Correo electrónico seguro con funcionalidades avanzadas</string>
-    <string name="plan_visionary_title_">Cuentas especiales para nuestros clientes</string>
-    <string name="plan_business_title_">Cuentas especiales para nuestros clientes</string>
-    <string name="plan_plus_line2_">1000 mensajes enviados por día</string>
-    <string name="plan_plus_line3_">Etiquetas y filtros personalizados</string>
-    <string name="plan_plus_line4_">Enviar mensajes cifrados a destinatarios externos</string>
-    <string name="plan_plus_line7_">Soporte prioritario</string>
-    <string name="plan_free_line1_">500 MB de almacenamiento</string>
-    <string name="plan_free_line2_">150 mensajes al día</string>
-    <string name="plan_free_line3_">20 etiquetas</string>
-    <string name="plan_free_line4_">Dominios personalizados: no soportado</string>
-    <string name="plan_free_line5_">1 dirección</string>
-    <string name="plan_free_line6_">Soporte limitado</string>
-    <string name="plan_visio_line2_">Sin límites de envío</string>
-    <string name="plan_visio_line3_">Acceso temprano a nuevas funciones</string>
-    <string name="plan_visio_line6_">Ayudar a elegir nuevas funciones a través de encuestas para Visionary</string>
-    <string name="plan_business_line1_">¡Próximamente para que las organizaciones disfruten del correo cifrado!</string>
-    <string name="currency_duration_">Divisa y Duración</string>
-    <string name="credit_card_name_">Nombre en la tarjeta de crédito/débito</string>
-    <string name="zip_code_">Código postal</string>
-    <string name="card_number_">Número de la tarjeta</string>
-    <string name="billing_information_">Información de facturación</string>
     <string name="country">País</string>
-    <string name="cvc_">CVC</string>
-    <string name="terms_and_conditions_billing_">Al hacer clic en enviar, acepta
-    cumplir con los\n <a href="https://protonmail.com/terms-and-conditions">términos y condiciones de ProtonMail</a></string>
-    <string name="submit_">Enviar</string>
-    <string name="currency_">Divisa</string>
-    <string name="plan_duration_">Ciclo de facturación</string>
-    <string name="duration_annual_line1_">Plan anual <font color="#C3E129">Ahorra un 20%</font></string>
-    <string name="per_month_text_only_">por mes</string>
-    <string name="duration_annual_line3">Facturado como %s /Año</string>
-    <string name="duration_annual_line4">Facturado %s /Mes</string>
-    <string name="duration_monthly_line1_">Plan mensual</string>
-    <string name="duration_monthly_line3">Ahorra 20%</string>
     <string name="set_cont">Establecer y Continuar</string>
-    <string name="payment_error_">Error de pago</string>
     <string name="error">Error</string>
-    <string name="try_another_card">Prueba con otra tarjeta</string>
-    <string name="try_another_paypal">Pagar con PayPal</string>
-    <string name="try_another_payment_method_">Prueba con otro</string>
-    <string name="submit_paypal_">Pagar con PayPal</string>
-    <string name="picker_card_">Tarjeta de crédito/débito</string>
-    <string name="picker_paypal_">PayPal</string>
-    <string name="paypal_disclaimer_">Necesitarás iniciar sesión en tu cuenta de PayPal para completar esta transacción. Abriremos una nueva ventana del navegador con PayPal para ti.</string>
-    <string name="payment_picker_disclaimer_">Seleccione el tipo de pago</string>
-    <string name="payment_success_title_">¡Pago exitoso!</string>
-    <string name="payment_success_text_">Estamos mejorando tu cuenta, por favor espera un momento. ¡Gracias por tu apoyo!</string>
-    <string name="donation_success_title">¡Donación exitosa!</string>
-    <string name="donation_success_text">Su apoyo es esencial para mantener funcionando a ProtonMail. ¡Gracias por apoyar la privacidad en internet!</string>
-    <string name="create_free_account_">Crear cuenta gratuita</string>
     <string name="storage_gb">%d GB de almacenamiento</string>
     <string name="storage_mb">%d MB de almacenamiento</string>
     <string name="max_addresses">Hasta %d direcciones alias</string>
     <string name="inline_prefix">[Inline]</string>
     <string name="inline_header">%d imágenes incrustadas</string>
     <string name="select">Seleccionar</string>
-    <string name="change_currency_">Cambiar divisa</string>
-    <string name="switch_billing_monthly_">Cambiar a Mensual</string>
-    <string name="switch_billing_yearly">Cambiar a Anual</string>
     <string name="warning">Advertencia</string>
     <string name="empty_recovery_email_question">Advertencia: no estableció un email de recuperación así que la recuperación de la cuenta será imposible si olvida su contraseña. ¿Proceder sin email de recuperación?</string>
     <string name="card_details_title">%1$s (*** %2$s)</string>
     <string name="card_details_subtitle">Vencimiento %s</string>
-    <string name="payment_methods_">Métodos de pago</string>
-    <string name="payment_approval_activity">Aprobación de método de pago</string>
-    <string name="payment_approval_success">El método de pago ha sido aprobado</string>
-    <string name="payment_approval_unknown_error_description">Ha ocurrido un error al intentar verificar tu método de pago. Por favor, inténtalo de nuevo o cambia a otra tarjeta.</string>
-    <string name="payment_approval_cancel_error_description">Verificación del método de pago cancelada. Intente de nuevo o cambie a otra tarjeta.</string>
-    <string name="payment_approval_consumed_error_description">Método de pago ya utilizado para este pago. Compruebe el estado de su suscripción.</string>
     <string name="no_payment_methods">No tiene métodos de pago guardados.</string>
     <string name="edit_payment_methods">Inicie sesión a través de protonmail.com para editar la información de facturación.</string>
     <string name="message_not_loaded">No se cargó el mensaje</string>
@@ -493,12 +352,7 @@
     <string name="delete_selected">Eliminar seleccionado</string>
     <string name="pin_not_activated">PIN no activado</string>
     <string name="available_options">Opciones disponibles</string>
-    <string name="current_recovery_email_">Correo de recuperación actual</string>
     <string name="change_recovery_email">Cambiar correo de recuperación</string>
-    <string name="new_recovery_email_">Nuevo correo de recuperación</string>
-    <string name="confirm_new_recovery_email_">Confirmar nuevo correo de recuperación</string>
-    <string name="recovery_emails_invalid_">La dirección de email no coincide o es inválida</string>
-    <string name="authenticate_">Autentificar</string>
     <string name="background_sync_subtitle">Si esta opción está habilitada, la aplicación se sincronizará con el servidor en segundo plano. Al deshabilitar esta función se deshabilitarán las notificaciones push.</string>
     <string-array name="notification_options">
         <item>Sin vibración ni sonido</item>
@@ -748,7 +602,6 @@
     <string name="contact_add_addr_to_group">Añadir dirección a grupos</string>
     <string name="title_activity_address_chooser">Gestionar direcciones</string>
     <string name="title_activity_account_manager">Gestionar cuentas</string>
-    <string name="title_activity_connect_account_">Conectar cuenta</string>
     <string name="account_manager_add_account">Añadir cuenta</string>
     <string name="account_manager_remove_all_accounts">Eliminando todas las cuentas</string>
     <string name="account_manager_note">Puede iniciar sesión simultáneamente en un número ilimitado de cuentas de pago de ProtonMail y en una cuenta gratuita.</string>
@@ -758,7 +611,6 @@
     <string name="manage_accounts_user_loggedout">%s (desconectada)</string>
     <string name="manage_accounts_user_primary">%s (principal)</string>
     <string name="account_manager_remove">Eliminar</string>
-    <string name="connect_account_login_title_">Iniciar sesión en tu cuenta de ProtonMail</string>
     <string name="default_error_message">Ocurrió un error</string>
     <string name="no_contact_groups">No hay grupos de contactos</string>
     <string name="search_contacts_inside_group">Buscar contactos dentro del grupo</string>
@@ -952,7 +804,6 @@ compre más
     <string name="connect_account_limit_subtitle">No puedes añadir otra cuenta gratuita de ProtonMail. Sólo se puede añadir una cuenta gratuita de ProtonMail. Por favor, cierra la sesión de tu otra cuenta gratuita o actualiza una de tus cuentas gratuitas a una cuenta de pago.</string>
     <string name="switch_accounts_question">¿Cambiar de cuenta?</string>
     <string name="switch_to_account">Cambiar a %s</string>
-    <string name="login_failure_missing_keys">La cuenta que está intentando añadir no tiene claves generadas. Añada esta cuenta como una primera cuenta en la app, o inicie sesión en la versión web para generar claves y luego añadirla como una cuenta adicional en la app.</string>
     <!-- endregion -->
     <!-- region Compose shortcut -->
     <string name="shortcut_compose">Redactar</string>
