--- a/app/src/main/res/values-kab/strings.xml
+++ b/app/src/main/res/values-kab/strings.xml
@@ -21,20 +21,13 @@
     <string name="protonmail">ProtonMail</string>
     <string name="encrypted_emails">IMAYL YETTWAWGELHEN</string>
     <string name="secure_email_swiss">Imayl aɣelsan yellan <br/>di Swis</string>
-    <string name="decrypt_mailbox_">Zmek <b>Tanaka n urmas</b></string>
     <string name="decrypt">Zmek</string>
-    <string name="user_sign_in_">Tuqqna</string>
-    <string name="two_factor_sign_in_">Asesteb s snat n tarrayin</string>
-    <string name="sign_in_">Qqen</string>
+    <string name="sign_in">Qqen</string>
     <string name="sign_out">Ffeɣ</string>
     <string name="sign_out_question">Tebɣiḍ ad teffɣeḍ?</string>
-    <string name="mailbox_password_">Awal uffir n tnaka n yimayl</string>
-    <string name="two_factor_code_">Asesteb s snat n tarayin</string>
     <string name="processing_request">Your request is being processed</string>
     <!-- should check for html tag -->
     <string name="need_to_be_logged_in">Ur teqqined ara !</string>
-    <string name="forgot_password_">Tettud awal uffir ?</string>
-    <string name="reset_mailbox_password_">ALES AWENNEZ N WAWAL UFFIR N TNAKA N YIMAYL</string>
     <string name="forgot_mailbox_password">Akken ad talseḍ awennez n wawal-ik uffi, seqdec lqem web n ProtonMail di protonmail.com</string>
     <!-- Toast messages -->
     <string name="error_chrome_disabled">D awezɣi tulya n ugbur. Ttxil sermed Chrome</string>
@@ -44,10 +37,7 @@
     <string name="no_more_messages">Ulac akk iznan</string>
     <string name="mailbox_login_failure">Anekcum ar tnaka n yimayl ur yeddi ara</string>
     <string name="login_failure">Anekcum ur yeddi ara</string>
-    <string name="invalid_server_proof">Ttbut n uqeddac mačči d tameɣtut</string>
-    <string name="invalid_credentials">Yir inekcam</string>
     <string name="incorrect_key_parameters">Iɣewwaren i rmeɣta n tsarut</string>
-    <string name="invalid_mailbox_password">Yir awal uffir n tnaka n yimayl</string>
     <string name="not_signed_up">Ur tjerrdeḍ ara iman-ik ar ProtonMail Android Beta</string>
     <string name="no_network">Ulac tuqqna</string>
     <string name="no_network_queued">Ulac azeṭṭa, izen yettraǧu</string>
@@ -207,47 +197,18 @@
     <string name="enter">Sekcem</string>
     <string name="cancel">Sesfex</string>
     <string name="close">Mdel</string>
-    <string name="change_password_">Snifel awal uffir</string>
-    <string name="change_mailbox_password_">Snifel awal uffir n tnaka n yimayl</string>
     <string name="eo_password_title">Sbadu awal uffir</string>
     <string name="eo_password_subtitle">Sbadu awal uffis i uwgelhen n yizen-agi i yiseqdacen ur yellin ara di ProtonMail</string>
     <string name="eo_password_more_info">Issin ugar</string>
-    <string name="old_login_password_">Awal uffir n unekcum amiran</string>
-    <string name="new_login_password_">Awal uffir amaynut</string>
-    <string name="confirm_new_login_password_">Sentem awal uffir amaynut</string>
-    <string name="new_mailbox_password_">Awal uffir n tnaka n yimayl amaynut</string>
-    <string name="confirm_new_mailbox_password_">Sentem awal uffir n tnaka n yimayl amiran</string>
     <string name="no_attachments">0 ifuyla yeddan</string>
-    <string name="new_passwords_not_valid">Yir anekcam</string>
-    <string name="new_passwords_do_not_match">Awalen uffiren ur menṭaḍen ara</string>
-    <string name="new_login_password_saved">Awal uffir n tuqqna amaynut yettwasekles</string>
-    <string name="new_mailbox_password_saved">Awal uffir n tnaka n yimayl amaynut yettwasekles</string>
     <string name="pin_lock_option_settings">Iɣewwaṛen n usekkeṛ n usnas</string>
     <string name="pin_lock_after">Sekkeṛ asnas deffi n</string>
     <string name="lock_the_app">Sekkeṛ asnas</string>
     <string name="display_name_banned_chars">Yir isem n uskan. \'&gt;\' and \'&lt;\' ur ttwasirgen ara</string>
     <string name="cont">Kemmel</string>
     <string name="reply_prefix_on">Irmed</string>
-    <string name="create_new_account_">Rnu amiḍan amaynut</string>
-    <string name="setup_new_account">Sbadu amiḍan-ik</string>
-    <string name="create_account_">Rnu amiḍan</string>
-    <string name="create_passwords_">Sbadu awal uffir</string>
-    <string name="caps_username_">Isem n useqdac</string>
-    <string name="caps_login_password_">Awal uffir</string>
-    <string name="caps_confirm_password_">Sentem awal uffir</string>
-    <string name="caps_optional_">*AFRAYAN</string>
-    <string name="update_me_for_new_features_">Lɣu-yi-d ɣef timahilin timaynutin</string>
-    <string name="create_mailbox_password_">Rnu awal uffir</string>
-    <string name="password_note_"><b>Tamawt:</b> Ayagi yettwaseqdac i ugelhen d uzmak n yiznan-ik.
-        Ur sṛuḥuy ara awal-agi uffir, ur nezmir ara ad t-id-nerr. Ma tesruḥeḍ awal-ik uffir, ur tettizmired ara ad teɣreḍ imaylen-ik.</string>
-    <string name="username_note_"><b>Tamawt:</b> Isem n useqdac d tansa-ik ProtonMail</string>
     <string name="terms_and_conditions">By using ProtonMail, you agree to our\n
         <a href="https://protonmail.com/terms-and-conditions">terms and conditions</a> and <a href="https://protonmail.com/privacy-policy">privacy policy</a></string>
-    <string name="encryption_setup_">Tawila n uwgelhen</string>
-    <string name="high_security_">Taɣellist meqqren (2048 n ibiten)</string>
-    <string name="current_standard_">Tagnut tamirant</string>
-    <string name="extreme_security_">Taɣellist tazɣarayt (4096 n ibiten)</string>
-    <string name="highest_security_">Aswir meqqern ugar n uuwgelhen yellan.<b> Yezmer ad yawi ddeqs n tisdatin.</b></string>
     <string name="labels_title_apply">Snes tibzimin</string>
     <string name="labels_title_add">Rnu tabzimt</string>
     <string name="labels_title">Tibzimin</string>
@@ -286,13 +247,6 @@
     <string name="display_images">Sken tugniwin</string>
     <string name="retry">Ɛref̣ tikelt-nniḍen</string>
     <string name="saving_failed_no_conn">Asekles yecceḍ, ulac tuqqna</string>
-    <string name="username_is_available">Yella %s!</string>
-    <string name="username_is_not_available">Ulac %s!</string>
-    <string name="username_is_too_long">Maximum length for a username is %d characters!</string>
-    <string name="congratulation_">Ayuz!</string>
-    <string name="new_account_ready_">Amiḍan-ik amaynut n \nyimayl aɣelsan ihegga.</string>
-    <string name="optional_email_note_">Tansa imayl n tririt tafrayant ad k-teǧǧ ad talseḍ awennez n wawal-ik uffir ma tettuḍ-ṭ.</string>
-    <string name="optional_display_name_">Ticki tuzneḍ imayl, d isem ara d-ibanen deg urti amazan.</string>
     <string name="close_engagement">mdel tirza tafessast</string>
     <string name="engagement_title_welcome">Anṣuf yiswen ɣer ProntonMail!</string>
     <string name="engagement_title_swipe">Tigawin n uḍummu tiriraḍin</string>
@@ -310,7 +264,6 @@
     <string name="attachment_exists">Attachment already attached</string>
     <string name="sending_email_success">Tangalt n usenqed tettwazen</string>
     <string name="sending_email_failed">Tuzna n tengalt n usenqed tecceḍ</string>
-    <string name="password_not_valid_">Awal uffir yettwakecmen mačči d ameɣtu</string>
     <string name="send_code_wait">Please wait %d seconds to click again</string>
     <string name="eo_password_not_completed">Awal uffir n yizen ur immid ara.</string>
     <string name="delinquency_subtitle">Access to this account is disabled due to non-payment. Please sign in through protonmail.com to pay your unpaid invoice.</string>
@@ -367,108 +320,20 @@
     <string name="log_out">Log out %s?</string>
     <string name="logout_question">Tebɣiḍ ad teffɣeḍ?</string>
     <string name="logout_question_next_account">Are you sure you want to logout with current account and proceed using %s?</string>
-    <string name="upselling_">Sali aswir/Mudd tawsa</string>
-    <string name="upselling_title_">ProtonMail is free and open source</string>
-    <string name="upselling_subtitle_">We need your support to continue protecting privacy and improving ProtonMail</string>
-    <string name="upselling_donate_title_">Mudd tawsa</string>
-    <string name="upselling_upgrade_title_">Ali ar ProtonMail Plus</string>
-    <string name="upselling_donate_subtitle">Tawsa-ik ad ɣ-d-mudd afus ad nessali tazmert udiɣ ad nkemmel ad nesnefli ProtonMail akken ad yeqqim d aseɣzan ilelli d aɣbalu yeldin. S useqdec neɣ tallelt n tmezdagnut-nneɣ, ad nizmir ad nkemmel asuffeɣ n ProtonMail ar umaḍal meṛṛa.</string>
-    <string name="upgrade_donate">Leqqem/Tawsa</string>
-    <string name="upselling_donate_pick_amount_">Fren tallayt n tewsa neɣ sekcem tallyt tebɣiḍ</string>
-    <string name="amount_5_">5€</string>
-    <string name="amount_15">15€</string>
-    <string name="amount_50">50€</string>
-    <string name="amount_100">100€</string>
-    <string name="donation_amount_">Sekcem tallayt n tewsa</string>
-    <string name="donate_">Mudd tawsa</string>
-    <string name="donate_paypal_bitcoin_">Mudd s PayPal neɣ Bitcoin</string>
-    <string name="upgrade_line1_">Tal taɣawsa tella di tikci-nneɣ n baṭel</string>
-    <string name="upgrade_line2_">5 GAṬ n usekles</string>
-    <string name="upgrade_line3_">Seqdec taɣult-ik</string>
-    <string name="upgrade_line4_">Arama d 50 n yimaylen</string>
-    <string name="upgrade_line5_">Tallelt n umsaɣ yezwaren</string>
     <string name="upgrade">Leqqem</string>
-    <string name="payment_options_">Aɣewwar n lexlas</string>
-    <string name="other_plans_">I tikciyin s wugar n usekles, sali aswir n umiḍan-ik seg ugrudem web n ProtonMail.</string>
-    <string name="upgrade_paid_user">Thank you for being a paid user!</string>
-    <string name="select_account_type_">Fren anaw n umiḍa-ik</string>
-    <string name="select_account_type_subtitle_">ProtonMail is a free service
-    for the public good. You can help support online privacy by selecting a paid account.</string>
-    <string name="plan_free_with_price_">ILELLI</string>
-    <string name="plan_plus_with_price_">PLUS %s deg aggur</string>
-    <string name="plan_visionary_with_price_">VISIONARY %s deg aggur</string>
-    <string name="plan_business_with_price_">BUSINESS %s deg aggur</string>
-    <string name="plan_free_title_">Amiḍan azadur s talast n timahilin</string>
-    <string name="plan_plus_title_">Imayl aɣelsan s timahilin leqqayen</string>
-    <string name="plan_visionary_title_">Imiḍanen uzzigen i wid i ɣ-d-yettmuddun afus</string>
-    <string name="plan_business_title_">Imiḍanen uzzigen i wid i ɣ-d-yettmuddun afus</string>
-    <string name="plan_plus_line2_">Azen arama d 1000 n yiznan deg ass</string>
-    <string name="plan_plus_line3_">Tibzimin akk d imzizdigen udmawanen</string>
-    <string name="plan_plus_line4_">Azen iznan iwgelhanen ar iɣerwaḍen izɣarayen</string>
-    <string name="plan_plus_line7_">Tallelt n umsaɣ yezwaren</string>
-    <string name="plan_free_line1_">500 Maṭ n usekles</string>
-    <string name="plan_free_line2_">150 n yiznan deg ass</string>
-    <string name="plan_free_line3_">20 tibzimin</string>
-    <string name="plan_free_line4_">Tiɣula tudmawanin: ur ttusefrakent ara</string>
-    <string name="plan_free_line5_">1 n tansa</string>
-    <string name="plan_free_line6_">Ameẓlu n umsaɣ: s talast</string>
-    <string name="plan_visio_line2_">Ulac talast g tuzna</string>
-    <string name="plan_visio_line3_">Anekcum uzwir ar timahilin timaynutin</string>
-    <string name="plan_visio_line6_">Ttekki deg ufran n timahilin timaynutin s tifranin i wid yesɣan tikci Visionary</string>
-    <string name="plan_business_line1_">ad d-yeddu ar zdat i tuddsiwin ara yizmiren ad tfarṣen tagnit seg imaylen iwgelhanen!</string>
-    <string name="currency_duration_">Tadrimt &amp; Tanzagt</string>
-    <string name="credit_card_name_">Name on credit/debit card</string>
-    <string name="zip_code_">Tangalt n lpusṭa</string>
-    <string name="card_number_">Uṭṭun n tkarḍa</string>
-    <string name="billing_information_">Talɣut n ufter</string>
     <string name="country">Tamurt</string>
-    <string name="cvc_">CVC</string>
-    <string name="terms_and_conditions_billing_">By clicking Submit, you agree
-    to abide by\n<a href="https://protonmail.com/terms-and-conditions">ProtonMail\'s terms and conditions</a></string>
-    <string name="submit_">Sumer</string>
-    <string name="currency_">Azamul n tedrimt</string>
-    <string name="plan_duration_">Twala n ufter</string>
-    <string name="duration_annual_line1_">Tikci n useggas <font color="#C3E129"> Ḥrez 20%</font></string>
-    <string name="per_month_text_only_">deg aggur</string>
-    <string name="duration_annual_line3">Yettwafter s %s i useggas</string>
-    <string name="duration_annual_line4">Yettwafter %s i waggur</string>
-    <string name="duration_monthly_line1_">Tikci n waggur</string>
-    <string name="duration_monthly_line3">Ḥrez 20%</string>
     <string name="set_cont">Sekles &amp; kemmel</string>
-    <string name="payment_error_">Tuccḍa di lexlaṣ</string>
     <string name="error">Tuccḍa</string>
-    <string name="try_another_card">Ɛreḍ takarḍa nniḍen</string>
-    <string name="try_another_paypal">Xelleṣ s PayPal</string>
-    <string name="try_another_payment_method_">Eɛreḍ wayeḍ</string>
-    <string name="submit_paypal_">Senqed s PayPal</string>
-    <string name="picker_card_">Credit/debit card</string>
-    <string name="picker_paypal_">PayPal</string>
-    <string name="paypal_disclaimer_">You will need to login to your PayPal account to complete this transaction. We will open new browser window with PayPal for you.</string>
-    <string name="payment_picker_disclaimer_">Ttxil-k fren anaw n uxelleṣ</string>
-    <string name="payment_success_title_">Axelleṣ yedda akken iwata!</string>
-    <string name="payment_success_text_">We are now upgrading your account, please wait a moment. Thank you for your support!</string>
-    <string name="donation_success_title">Tikci tedda akken iwata!</string>
-    <string name="donation_success_text">Your support is essential to keeping ProtonMail running. Thank you for supporting internet privacy!</string>
-    <string name="create_free_account_">Snulfu-d amiḍan baṭel</string>
     <string name="storage_gb">%d GAṬ n usekles</string>
     <string name="storage_mb">%d Maṭ n usekles</string>
     <string name="max_addresses">Arama d %d n yimaylen</string>
     <string name="inline_prefix">[Inline]</string>
     <string name="inline_header">%d tugniwin tusliɣin</string>
     <string name="select">Fren</string>
-    <string name="change_currency_">Snifel azamul n tedrimt</string>
-    <string name="switch_billing_monthly_">Sken s waggur</string>
-    <string name="switch_billing_yearly">Sken s useggas</string>
     <string name="warning">Ɣur-k</string>
     <string name="empty_recovery_email_question">Ɣur-k: Ur d-muddeḍ ara imayl n tririt, tiririt ur tezmir ara ad d-ḍru ma yella tettuḍ awal-ik uffir. Tebɣiḍ ad tkemmleḍ s war imayl n tririt?</string>
     <string name="card_details_title">%1$s (*** %2$s)</string>
     <string name="card_details_subtitle">Tanzagt n tagara %s</string>
-    <string name="payment_methods_">Tirrayin n usellek</string>
-    <string name="payment_approval_activity">Payment Method Approval</string>
-    <string name="payment_approval_success">Payment method has been approved</string>
-    <string name="payment_approval_unknown_error_description">An error occurred while trying to verify your payment method. Please try again or switch to another card.</string>
-    <string name="payment_approval_cancel_error_description">Payment method verification cancelled. Please try again or switch to another card.</string>
-    <string name="payment_approval_consumed_error_description">Payment method already used for this payment. Please check status of your subscription.</string>
     <string name="no_payment_methods">Ur ɣur-k ara tarrayin n lexlaṣ yettwaskelsen.</string>
     <string name="edit_payment_methods">Qqen s protonmail akken ad tbeddleḍ talɣut n ufeter.</string>
     <string name="message_not_loaded">Izen ur d-yuli ara</string>
@@ -487,12 +352,7 @@
     <string name="delete_selected">Kkes afran</string>
     <string name="pin_not_activated">PIN yermid ara</string>
     <string name="available_options">Iɣewwaṛen yellan</string>
-    <string name="current_recovery_email_">Tansa imayl tamirant n tririt</string>
     <string name="change_recovery_email">Beddel tansa imayl n tririt</string>
-    <string name="new_recovery_email_">Imayl n tuγalin amaynut</string>
-    <string name="confirm_new_recovery_email_">Sentem imayl n tuγalin amaynut</string>
-    <string name="recovery_emails_invalid_">Tansa imayl ur tmenṭaḍ ara neɣ mačči d tameɣtut</string>
-    <string name="authenticate_">Asesteb</string>
     <string name="background_sync_subtitle">Ma yermed uɣewwaṛ-agi, asnas ad yemtawi d uqeddac deg ugilal. Ma yensa, ad nsen yilɣa push.</string>
     <string-array name="notification_options">
         <item>Ulac imesli n usenhez</item>
@@ -742,7 +602,6 @@
     <string name="contact_add_addr_to_group">Rnu tansa ɣer igrawen</string>
     <string name="title_activity_address_chooser">Sefrek Tansiwin</string>
     <string name="title_activity_account_manager">Sefrek imiḍanen</string>
-    <string name="title_activity_connect_account_">Connect Account</string>
     <string name="account_manager_add_account">Rnu amiḍan</string>
     <string name="account_manager_remove_all_accounts">Kkes akk imiḍanen</string>
     <string name="account_manager_note">You can be simultaneously logged into an unlimited number of paid ProtonMail accounts and one free account.</string>
@@ -752,7 +611,6 @@
     <string name="manage_accounts_user_loggedout">%s (logged out)</string>
     <string name="manage_accounts_user_primary">%s (primary)</string>
     <string name="account_manager_remove">Kkes</string>
-    <string name="connect_account_login_title_">Login to your ProtonMail account</string>
     <string name="default_error_message">Tella-d tuccḍa</string>
     <string name="no_contact_groups">Ulac igrawen n unermes</string>
     <string name="search_contacts_inside_group">Nadi ɣef inermisen deg ugraw</string>
@@ -945,7 +803,6 @@
     <string name="connect_account_limit_subtitle">Ur tezmireḍ ara ad ternuḍ amiḍan n baṭṭel n Protonmail. Yiwen kan n umiḍan baṭṭel i tzemreḍ ad ternuḍ. Ttxil ffeɣ seg umiḍan-inek. inem nniḍe, neɣ beddel ɣer umiḍan n uxelles.</string>
     <string name="switch_accounts_question">Switch account?</string>
     <string name="switch_to_account">Switch to %s</string>
-    <string name="login_failure_missing_keys">The account you are trying to add does not have generated keys. Please add this account as a first account on the app, or log in via the web version, to generate keys and then add it as a additional account in the app.</string>
     <!-- endregion -->
     <!-- region Compose shortcut -->
     <string name="shortcut_compose">Compose</string>
