--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -21,20 +21,13 @@
     <string name="protonmail">ProtonMail</string>
     <string name="encrypted_emails">E-MAIL CRIPTAT</string>
     <string name="secure_email_swiss">E-mail securizat\ngăzduit în Elveția</string>
-    <string name="decrypt_mailbox_">Decriptare <b>Mesaje</b></string>
     <string name="decrypt">Decriptare</string>
-    <string name="user_sign_in_">Conectare utilizator</string>
-    <string name="two_factor_sign_in_">Autentificare cu doi factori</string>
-    <string name="sign_in_">Conectare</string>
+    <string name="sign_in">Conectare</string>
     <string name="sign_out">Deconectare</string>
     <string name="sign_out_question">Sigur doriți să vă deconectați?</string>
-    <string name="mailbox_password_">Parolă mesaje</string>
-    <string name="two_factor_code_">Cod conectare cu doi factori</string>
     <string name="processing_request">Solicitarea este în curs de procesare</string>
     <!-- should check for html tag -->
     <string name="need_to_be_logged_in">Nu sunteți conectat!</string>
-    <string name="forgot_password_">Ați uitat parola?</string>
-    <string name="reset_mailbox_password_">RESETARE PAROLĂ MESAJE</string>
     <string name="forgot_mailbox_password">Pentru a reseta parola mesajelor, vă rugăm să folosiți versiunea web a ProtonMail de la protonmail.com</string>
     <!-- Toast messages -->
     <string name="error_chrome_disabled">Imposibil de încărcat conținutul. Vă rugăm să activați Chrome.</string>
@@ -44,10 +37,7 @@
     <string name="no_more_messages">Nu mai există mesaje</string>
     <string name="mailbox_login_failure">Autentificarea în mesaje a eșuat</string>
     <string name="login_failure">Autentificare eșuată</string>
-    <string name="invalid_server_proof">Dovadă server nevalidă</string>
-    <string name="invalid_credentials">Date de acreditare nevalide</string>
     <string name="incorrect_key_parameters">Parametri cheie incorecți</string>
-    <string name="invalid_mailbox_password">Parolă mesaje nevalidă</string>
     <string name="not_signed_up">Nu sunteți înscris(ă) pentru versiunea Beta a aplicației ProtonMail pentru Android</string>
     <string name="no_network">Nu există conexiune</string>
     <string name="no_network_queued">Nu există conexiune, mesaj pus în așteptare</string>
@@ -212,46 +202,17 @@
     <string name="enter">Introducere</string>
     <string name="cancel">Anulare</string>
     <string name="close">Închidere</string>
-    <string name="change_password_">Schimbare parolă</string>
-    <string name="change_mailbox_password_">Modificare parolă mesaje</string>
     <string name="eo_password_title">Setare parolă</string>
     <string name="eo_password_subtitle">Setați o parolă de criptare a acestui mesaj pentru cei ce nu folosesc ProtonMail</string>
     <string name="eo_password_more_info">Aflați mai multe</string>
-    <string name="old_login_password_">Parola actuală de conectare</string>
-    <string name="new_login_password_">Parolă nouă</string>
-    <string name="confirm_new_login_password_">Confirmare parolă nouă</string>
-    <string name="new_mailbox_password_">Parolă nouă mesaje</string>
-    <string name="confirm_new_mailbox_password_">Confirmare parolă mesaje</string>
     <string name="no_attachments">0 atașamente</string>
-    <string name="new_passwords_not_valid">Intrare nevalidă</string>
-    <string name="new_passwords_do_not_match">Parolele noi nu sunt identice</string>
-    <string name="new_login_password_saved">Parola nouă de conectare salvată</string>
-    <string name="new_mailbox_password_saved">Parola nouă a mesajelor a fost salvată</string>
     <string name="pin_lock_option_settings">Opțiuni blocare aplicație</string>
     <string name="pin_lock_after">Blocare aplicație după</string>
     <string name="lock_the_app">Blocare aplicație</string>
     <string name="display_name_banned_chars">Nume afișat nevalid. \'&gt;\' și \'&lt;\' nu sunt permise.</string>
     <string name="cont">Continuare</string>
     <string name="reply_prefix_on">Activat</string>
-    <string name="create_new_account_">Creare cont</string>
-    <string name="setup_new_account">Configurare cont</string>
-    <string name="create_account_">Creare cont</string>
-    <string name="create_passwords_">Setare parolă</string>
-    <string name="caps_username_">Utilizator</string>
-    <string name="caps_login_password_">Parola</string>
-    <string name="caps_confirm_password_">Confirmare parolă</string>
-    <string name="caps_optional_">*OPȚIONAL</string>
-    <string name="update_me_for_new_features_">Țineți-mă la curent cu noile caracteristici</string>
-    <string name="create_mailbox_password_">Creare parolă</string>
-    <string name="password_note_"><b>Notă:</b> Este folosită pentru a vă cripta și decripta mesajele.
-        Nu pierdeți parola, noi nu o putem recupera. Dacă o pierdeți nu mai puteți citi mesajele.</string>
-    <string name="username_note_"><b>Notă:</b> Numele utilizatorului este adresa dvs. din ProtonMail</string>
     <string name="terms_and_conditions">Folosind ProtonMail, sunteți de acord cu\n<a href="https://protonmail.com/terms-and-conditions">\"Termenii și condițiile\"</a> noastre precum și cu <a href="https://protonmail.com/privacy-policy">\"Politica de confidențialitate\"</a></string>
-    <string name="encryption_setup_">Configurare criptare</string>
-    <string name="high_security_">Securitate ridicată (2048 de biți)</string>
-    <string name="current_standard_">Standard curent</string>
-    <string name="extreme_security_">Securitate extremă (4096 de biți)</string>
-    <string name="highest_security_">Cel mai înalt nivel de criptare disponibil.<b>Setarea poate dura câteva minute.</b></string>
     <string name="labels_title_apply">Aplicare etichete</string>
     <string name="labels_title_add">Adăugare etichetă</string>
     <string name="labels_title">Etichete</string>
@@ -290,15 +251,6 @@
     <string name="display_images">Afișare conținut extern</string>
     <string name="retry">Reîncercare</string>
     <string name="saving_failed_no_conn">Salvare eșuată, nu există conexiune</string>
-    <string name="username_is_available">Nume disponibil!</string>
-    <string name="username_is_not_available">Numele de utilizator există deja!</string>
-    <string name="username_is_too_long">Lungimea maximă pentru nume utilizator este de %d caractere!</string>
-    <string name="congratulation_">Felicitări!</string>
-    <string name="new_account_ready_">Noul cont de e-mail\nsecurizat este gata.</string>
-    <string name="optional_email_note_">Adresa de e-mail opțională de recuperare vă
-         permite să resetați parola de conectare dacă o uitați.</string>
-    <string name="optional_display_name_">Când trimiteți un e-mail, acesta este numele care
-        apare în câmpul expeditorului.</string>
     <string name="close_engagement">închide ghid</string>
     <string name="engagement_title_welcome">Bine ați venit la ProtonMail!</string>
     <string name="engagement_title_swipe">Acțiuni rapide glisare</string>
@@ -316,7 +268,6 @@
     <string name="attachment_exists">Fișier atașat deja prezent</string>
     <string name="sending_email_success">Cod de verificare trimis</string>
     <string name="sending_email_failed">Trimitere eșuată cod de verificare</string>
-    <string name="password_not_valid_">Parola introdusă nu este validă</string>
     <string name="send_code_wait">Așteptați %d secunde înainte de a apăsa din nou</string>
     <string name="eo_password_not_completed">Nu a fost introdusă parola mesajului.</string>
     <string name="delinquency_subtitle">Accesul la acest cont este blocat datorită unei plăți restante. Autentificați-vă la protonmail.com și achitați factura restantă.</string>
@@ -375,111 +326,20 @@
     <string name="log_out">Deconectare %s?</string>
     <string name="logout_question">Sigur doriţi să vă deconectați?</string>
     <string name="logout_question_next_account">Veți fi comutat la %s.</string>
-    <string name="upselling_">Upgrade/Donare</string>
-    <string name="upselling_title_">ProtonMail este gratuit și cu cod sursă public</string>
-    <string name="upselling_subtitle_">Avem nevoie de susținerea dvs. pentru continuarea protejării intimității și îmbunătățirii ProtonMail</string>
-    <string name="upselling_donate_title_">Donați</string>
-    <string name="upselling_upgrade_title_">Upgrade la ProtonMail Plus</string>
-    <string name="upselling_donate_subtitle">Prin donația dvs. ne veți ajuta să
-    ne mărim capacitatea și să continuăm dezvoltarea ProtonMail, gratuit și cu cod sursă public.
-    Doar cu susținerea comunității putem continua să oferim ProtonMail tuturor oamenilor.</string>
-    <string name="upgrade_donate">Upgrade/Donare</string>
-    <string name="upselling_donate_pick_amount_">Selectați suma donată sau introduceți orice sumă</string>
-    <string name="amount_5_">5 €</string>
-    <string name="amount_15">15 €</string>
-    <string name="amount_50">50 €</string>
-    <string name="amount_100">100 €</string>
-    <string name="donation_amount_">Introduceți suma donată</string>
-    <string name="donate_">Donați</string>
-    <string name="donate_paypal_bitcoin_">Donați prin PayPal sau Bitcoin</string>
-    <string name="upgrade_line1_">Tot ce este inclus în planul Gratuit</string>
-    <string name="upgrade_line2_">5 GB de spațiu</string>
-    <string name="upgrade_line3_">Folosiți domeniul propriu</string>
-    <string name="upgrade_line4_">Până la 5 aliasuri</string>
-    <string name="upgrade_line5_">Asistență prioritară clienți</string>
     <string name="upgrade">Upgrade</string>
-    <string name="payment_options_">Opțiuni de plată</string>
-    <string name="other_plans_">Pentru planuri cu mai mult spațiu de stocare,
-    accesați pagina web a ProtonMail.</string>
-    <string name="upgrade_paid_user">Vă mulțumim că ați ales să plătiți!</string>
-    <string name="select_account_type_">Selectare tip cont</string>
-    <string name="select_account_type_subtitle_">ProtonMail este un serviciu
-    gratuit pentru binele public. Puteți susține intimitatea pe Internet selectând un cont cu plată.</string>
-    <string name="plan_free_with_price_">GRATUIT</string>
-    <string name="plan_plus_with_price_">PLUS %s /lună</string>
-    <string name="plan_visionary_with_price_">VIZIONAR %s /lună</string>
-    <string name="plan_business_with_price_">BUSINESS %s /lună</string>
-    <string name="plan_free_title_">Cont simplu cu opțiuni limitate</string>
-    <string name="plan_plus_title_">E-mail sigur cu opțiuni avansate</string>
-    <string name="plan_visionary_title_">Conturi speciale pentru susținătorii noștri</string>
-    <string name="plan_business_title_">Conturi speciale pentru susținătorii noștri</string>
-    <string name="plan_plus_line2_">Trimitere până la 1000 de mesaje pe zi</string>
-    <string name="plan_plus_line3_">Etichete și filtre personale</string>
-    <string name="plan_plus_line4_">Trimitere mesaje criptate destinatarilor externi</string>
-    <string name="plan_plus_line7_">Suport prioritar clienți</string>
-    <string name="plan_free_line1_">500 MB spațiu</string>
-    <string name="plan_free_line2_">150 mesaje pe zi</string>
-    <string name="plan_free_line3_">20 de etichete</string>
-    <string name="plan_free_line4_">Domenii personale: nesuportate</string>
-    <string name="plan_free_line5_">O adresă</string>
-    <string name="plan_free_line6_">Asistență clienți: limitată</string>
-    <string name="plan_visio_line2_">Fără limite la trimitere</string>
-    <string name="plan_visio_line3_">Acces timpuriu la funcții noi</string>
-    <string name="plan_visio_line6_">Ajută la alegerea de caracteristici noi prin intermediul sondajelor exclusive Visionary</string>
-    <string name="plan_business_line1_">în curând plan de e-mail criptat și pentru organizații!</string>
-    <string name="currency_duration_">Monedă &amp; Durată</string>
-    <string name="credit_card_name_">Titular card de credit/debit</string>
-    <string name="zip_code_">Cod poştal</string>
-    <string name="card_number_">Număr card</string>
-    <string name="billing_information_">Informații referitoare la facturare</string>
     <string name="country">Țara</string>
-    <string name="cvc_">CVC</string>
-    <string name="terms_and_conditions_billing_">Apăsând pe «Trimitere», sunteți de acord
-    să respectați\n<a href="https://protonmail.com/terms-and-conditions">Termenii și condițiile ProtonMail</a></string>
-    <string name="submit_">Trimitere</string>
-    <string name="currency_">Moneda</string>
-    <string name="plan_duration_">Ciclu facturare</string>
-    <string name="duration_annual_line1_">Plan anual <font color="#C3E129">Economisiți 20%</font></string>
-    <string name="per_month_text_only_">pe lună</string>
-    <string name="duration_annual_line3">Facturat ca %s /an</string>
-    <string name="duration_annual_line4">Facturat ca %s /lună</string>
-    <string name="duration_monthly_line1_">Plan lunar</string>
-    <string name="duration_monthly_line3">Economisiți 20%</string>
     <string name="set_cont">Setare și continuare</string>
-    <string name="payment_error_">Eroare la plată</string>
     <string name="error">Eroare</string>
-    <string name="try_another_card">Încercați un alt card</string>
-    <string name="try_another_paypal">Plată cu PayPal</string>
-    <string name="try_another_payment_method_">Încercați alta</string>
-    <string name="submit_paypal_">Plată cu PayPal</string>
-    <string name="picker_card_">Card de credit/debit</string>
-    <string name="picker_paypal_">PayPal</string>
-    <string name="paypal_disclaimer_">Va trebui să vă autentificați în contul PayPal pentru finalizarea tranzacției. Se va deschide o nouă fereastră cu PayPal.</string>
-    <string name="payment_picker_disclaimer_">Selectați metoda de plată</string>
-    <string name="payment_success_title_">Plată reușită!</string>
-    <string name="payment_success_text_">Se îmbunătățește contul, așteptați puțin. Vă mulțumim pentru suport!</string>
-    <string name="donation_success_title">Donație reușită!</string>
-    <string name="donation_success_text">Suportul dvs. este esențial pentru a păstra funcționarea ProtonMail. Vă mulțumim pentru sprijinirea confidențialității Internetului!</string>
-    <string name="create_free_account_">Creare cont gratuit</string>
     <string name="storage_gb">%d GB spațiu</string>
     <string name="storage_mb">%d MB spațiu</string>
     <string name="max_addresses">Până la %d de aliasuri de e-mail</string>
     <string name="inline_prefix">[Inline]</string>
     <string name="inline_header">%d imagini incluse</string>
     <string name="select">Selectare</string>
-    <string name="change_currency_">Schimbare monedă</string>
-    <string name="switch_billing_monthly_">Trecere la lunar</string>
-    <string name="switch_billing_yearly">Trecere la anual</string>
     <string name="warning">Avertizare</string>
     <string name="empty_recovery_email_question">Avertizare: Nu ați setat un e-mail de recuperare pentru a vă putea recuperarea contul dacă vă uitați parola. Continuați fără e-mail de recuperare?</string>
     <string name="card_details_title">%1$s (*** %2$s)</string>
     <string name="card_details_subtitle">Expirare %s</string>
-    <string name="payment_methods_">Metode de plată</string>
-    <string name="payment_approval_activity">Aprobare metodă de plată</string>
-    <string name="payment_approval_success">Metoda de plată a fost aprobată</string>
-    <string name="payment_approval_unknown_error_description">A apărut o eroare la verificarea metodei de plată. Reîncercați sau folosiți alt card.</string>
-    <string name="payment_approval_cancel_error_description">Verificarea metodei de plată a fost anulată. Reîncercați sau folosiți alt card.</string>
-    <string name="payment_approval_consumed_error_description">Metoda de plată a fost deja folosită pentru această plată. Verificați starea abonamentului.</string>
     <string name="no_payment_methods">Nu aveți modalități de plată salvate.</string>
     <string name="edit_payment_methods">Autentificați-vă pe protonmail.com pentru a edita informațiile de facturare.</string>
     <string name="message_not_loaded">Mesajul nu a fost încărcat</string>
@@ -498,12 +358,7 @@
     <string name="delete_selected">Ștergere selectate</string>
     <string name="pin_not_activated">PIN neactivat</string>
     <string name="available_options">Opțiuni disponibile</string>
-    <string name="current_recovery_email_">Adresă curentă e-mail de recuperare</string>
     <string name="change_recovery_email">Schimbare adresă de recuperare</string>
-    <string name="new_recovery_email_">E-mail de recuperare nou</string>
-    <string name="confirm_new_recovery_email_">Confirmare adresă de recuperare</string>
-    <string name="recovery_emails_invalid_">Adresa nu se potrivește sau nu este validă</string>
-    <string name="authenticate_">Autentificare</string>
     <string name="background_sync_subtitle">Dacă este activată, aplicația se va sincroniza cu serverul în fundal. Dezactivând-o, se oprește funcția de notificare.</string>
     <string-array name="notification_options">
         <item>Fără vibrație sau sunet</item>
@@ -754,7 +609,6 @@
     <string name="contact_add_addr_to_group">Adăugare adresă în grupuri</string>
     <string name="title_activity_address_chooser">Gestionare adrese</string>
     <string name="title_activity_account_manager">Gestionare conturi</string>
-    <string name="title_activity_connect_account_">Conectare cont</string>
     <string name="account_manager_add_account">Adăugare cont</string>
     <string name="account_manager_remove_all_accounts">Eliminare toate conturile</string>
     <string name="account_manager_note">Puteți fi autentificat într-un număr nelimitat de conturi cu plată ProtonMail și într-un singur cont gratuit.</string>
@@ -764,7 +618,6 @@
     <string name="manage_accounts_user_loggedout">%s (deconectat)</string>
     <string name="manage_accounts_user_primary">%s (primar)</string>
     <string name="account_manager_remove">Eliminare</string>
-    <string name="connect_account_login_title_">Conectare la contul ProtonMail</string>
     <string name="default_error_message">A apărut o eroare</string>
     <string name="no_contact_groups">Nu există grupuri de contacte</string>
     <string name="search_contacts_inside_group">Căutare contacte în grup</string>
@@ -965,7 +818,6 @@
     <string name="connect_account_limit_subtitle">Nu mai puteți adăuga al cont gratuit ProtonMail. Poate fi adăugat doar un singur cont gratuit ProtonMail. Deconectați-vă din celălalt cont gratuit sau convertiți unul din conturile gratuite într-un cont cu plată.</string>
     <string name="switch_accounts_question">Comutați contul?</string>
     <string name="switch_to_account">Comutare la %s</string>
-    <string name="login_failure_missing_keys">Contul pe care încercați să îl adăugați nu are chei generate. Adăugați acest cont ca primul în aplicație sau autentificați-vă în versiunea web pentru a genera cheile și apoi adăugați-l ca și cont adițional în aplicație.</string>
     <!-- endregion -->
     <!-- region Compose shortcut -->
     <string name="shortcut_compose">Compunere</string>
