--- a/app/src/main/res/values-sv-rSE/strings.xml
+++ b/app/src/main/res/values-sv-rSE/strings.xml
@@ -21,20 +21,13 @@
     <string name="protonmail">ProtonMail</string>
     <string name="encrypted_emails">KRYPTERAD E-POST</string>
     <string name="secure_email_swiss">Säker e-post baserad <br/> i Schweiz</string>
-    <string name="decrypt_mailbox_">Avkryptera <b>e-postlåda</b></string>
     <string name="decrypt">Avkryptera</string>
-    <string name="user_sign_in_">Användarinloggning</string>
-    <string name="two_factor_sign_in_">Tvåfaktorsautentisering</string>
-    <string name="sign_in_">Logga in</string>
+    <string name="sign_in">Logga in</string>
     <string name="sign_out">Logga ut</string>
     <string name="sign_out_question">Är du säker på att du vill logga ut?</string>
-    <string name="mailbox_password_">Lösenord för brevlådan</string>
-    <string name="two_factor_code_">Tvåfaktorskod</string>
     <string name="processing_request">Din begäran behandlas</string>
     <!-- should check for html tag -->
     <string name="need_to_be_logged_in">Du är inte inloggad!</string>
-    <string name="forgot_password_">Glömt lösenordet?</string>
-    <string name="reset_mailbox_password_">ÅTERSTÄLL LÖSENORDET FÖR BREVLÅDAN</string>
     <string name="forgot_mailbox_password">För att återställa lösenordet för din e-postlåda, vänligen använd ProtonMail:s webbversion på protonmail.com</string>
     <!-- Toast messages -->
     <string name="error_chrome_disabled">Kan inte ladda innehållet. Aktivera Chrome</string>
@@ -44,10 +37,7 @@
     <string name="no_more_messages">Inga fler meddelanden</string>
     <string name="mailbox_login_failure">Inloggningen misslyckades</string>
     <string name="login_failure">Inloggningen misslyckades</string>
-    <string name="invalid_server_proof">Ogiltigt server autentisering</string>
-    <string name="invalid_credentials">Ogiltiga inloggningsuppgifter</string>
     <string name="incorrect_key_parameters">Felaktiga nyckelparametrar</string>
-    <string name="invalid_mailbox_password">Ogiltigt lösenord</string>
     <string name="not_signed_up">ProtonMail Android Beta ingår inte i ditt konto</string>
     <string name="no_network">Inget nätverk</string>
     <string name="no_network_queued">Inget nätverk, meddelandet är köat</string>
@@ -207,45 +197,17 @@
     <string name="enter">Mata in</string>
     <string name="cancel">Avbryt</string>
     <string name="close">Stäng</string>
-    <string name="change_password_">Ändra lösenord</string>
-    <string name="change_mailbox_password_">Ändra lösenord för brevlådan</string>
     <string name="eo_password_title">Ange lösenord</string>
     <string name="eo_password_subtitle">Ange ett lösenord för att kryptera detta meddelande för icke-ProtonMail-användare</string>
     <string name="eo_password_more_info">Mer information</string>
-    <string name="old_login_password_">Ditt nuvarande lösenord</string>
-    <string name="new_login_password_">Nytt lösenord</string>
-    <string name="confirm_new_login_password_">Bekräfta nytt lösenord</string>
-    <string name="new_mailbox_password_">Nytt lösenord för brevlådan</string>
-    <string name="confirm_new_mailbox_password_">Bekräfta nytt lösenord för brevlådan</string>
     <string name="no_attachments">0 bilagor</string>
-    <string name="new_passwords_not_valid">Ogiltig inmatning</string>
-    <string name="new_passwords_do_not_match">De nya lösenorden stämmer inte överens med varandra</string>
-    <string name="new_login_password_saved">Nytt lösenord för inloggning sparat</string>
-    <string name="new_mailbox_password_saved">Nytt lösenord för brevlådan sparat</string>
     <string name="pin_lock_option_settings">Låsalternativ</string>
     <string name="pin_lock_after">Lås efter</string>
     <string name="lock_the_app">Lås appen</string>
     <string name="display_name_banned_chars">Ogiltigt visningsnamn. \'&gt;\' och \'&lt;\' är inte tillåtna</string>
     <string name="cont">Fortsätt</string>
     <string name="reply_prefix_on">På</string>
-    <string name="create_new_account_">Skapa ett nytt konto</string>
-    <string name="setup_new_account">Ställ in ditt konto</string>
-    <string name="create_account_">Skapa konto</string>
-    <string name="create_passwords_">Ange lösenord</string>
-    <string name="caps_username_">Användarnamn</string>
-    <string name="caps_login_password_">Lösenord</string>
-    <string name="caps_confirm_password_">Bekräfta lösenord</string>
-    <string name="caps_optional_">*VALFRITT</string>
-    <string name="update_me_for_new_features_">Håll mig uppdaterad om nya funktioner</string>
-    <string name="create_mailbox_password_">Skapa lösenord</string>
-    <string name="password_note_"><b>Notera:</b> Detta används för att kryptera och avkryptera dina meddelanden.        Tappa inte bort detta lösenord, vi kan inte återställa det. Om du förlorar ditt lösenord, kommer du inte kunna läsa din epost.</string>
-    <string name="username_note_"><b>Notera:</b> Användarnamnet är också din ProtonMail-adress</string>
     <string name="terms_and_conditions">Genom att använda ProtonMail godkänner du våra\n        <a href="https://protonmail.com/terms-and-conditions">villkor</a> och vår <a href="https://protonmail.com/privacy-policy">integritetspolicy</a></string>
-    <string name="encryption_setup_">Konfigurera kryptering</string>
-    <string name="high_security_">Hög säkerhet (2048 bitar)</string>
-    <string name="current_standard_">Nuvarande standard</string>
-    <string name="extreme_security_">Extrem säkerhet (4096 bitar)</string>
-    <string name="highest_security_">Högsta tillgängliga nivå av kryptering.<b>Kan ta flera minuter att sätta upp.</b></string>
     <string name="labels_title_apply">Applicera etiketter</string>
     <string name="labels_title_add">Lägg till etikett</string>
     <string name="labels_title">Etiketter</string>
@@ -284,15 +246,6 @@
     <string name="display_images">Läs in externt innehåll</string>
     <string name="retry">Försök igen</string>
     <string name="saving_failed_no_conn">Misslyckades att spara, ingen anslutning</string>
-    <string name="username_is_available">%s är tillgängligt!</string>
-    <string name="username_is_not_available">%s är INTE tillgängligt!</string>
-    <string name="username_is_too_long">Maximum length for a username is %d characters!</string>
-    <string name="congratulation_">Grattis!</string>
-    <string name="new_account_ready_">Ditt nya säkra epost-\nkonto är klart.</string>
-    <string name="optional_email_note_">Den valfria återställningsadressen ger dig möjlighet
-        att återställa ditt lösenord om du glömmer det.</string>
-    <string name="optional_display_name_">När du skickar e-post, är det detta namn som
-        syns i avsändarfältet.</string>
     <string name="close_engagement">Stäng rundturen</string>
     <string name="engagement_title_welcome">Välkommen till ProtonMail!</string>
     <string name="engagement_title_swipe">Snabba svepgester</string>
@@ -310,7 +263,6 @@
     <string name="attachment_exists">Bilagan är redan bifogad</string>
     <string name="sending_email_success">Verifieringskod har skickats</string>
     <string name="sending_email_failed">Det gick inte att skicka verifieringskoden</string>
-    <string name="password_not_valid_">Angivet lösenord är inte giltigt</string>
     <string name="send_code_wait">Vänta %d sekunder och klicka igen</string>
     <string name="eo_password_not_completed">Lösenord för meddelandet är inte angivet.</string>
     <string name="delinquency_subtitle">Tillgång till detta konto avstängt på grund av utebliven betalning. Logga in via protonmail.com för att betala utestående fakturor.</string>
@@ -367,110 +319,20 @@
     <string name="log_out">Log out %s?</string>
     <string name="logout_question">Är du säker på att du vill logga ut?</string>
     <string name="logout_question_next_account">Är du säker på att du vill logga ut med nuvarande konto och fortsätta med %s?</string>
-    <string name="upselling_">Uppgradera/donera</string>
-    <string name="upselling_title_">ProtonMail är gratis och open-source</string>
-    <string name="upselling_subtitle_">Vi behöver ditt stöd för att fortsätta skydda integriteten och förbättra ProtonMail</string>
-    <string name="upselling_donate_title_">Donera</string>
-    <string name="upselling_upgrade_title_">Uppgradera till ProtonMail Plus</string>
-    <string name="upselling_donate_subtitle">Din donation hjälper oss att
-    utöka kapacitet och fortsätta att utveckla ProtonMail som fri och öppen källkodsprogramvara. Det är
-    endast genom communitys stöd vi kan fortsätta tillhandahålla ProtonMail till människor runt om i
-    världen.</string>
-    <string name="upgrade_donate">Uppgradera/donera</string>
-    <string name="upselling_donate_pick_amount_">Välj belopp att donera eller ange valfritt belopp</string>
-    <string name="amount_5_">5€</string>
-    <string name="amount_15">15€</string>
-    <string name="amount_50">50€</string>
-    <string name="amount_100">100€</string>
-    <string name="donation_amount_">Ange belopp att donera</string>
-    <string name="donate_">Donera</string>
-    <string name="donate_paypal_bitcoin_">Donera via PayPal eller Bitcoin</string>
-    <string name="upgrade_line1_">Allt som ingår i gratis-planen</string>
-    <string name="upgrade_line2_">5 GB lagring</string>
-    <string name="upgrade_line3_">Använd din egen domän</string>
-    <string name="upgrade_line4_">Upp till 5 alias</string>
-    <string name="upgrade_line5_">Prioriterad kundsupport</string>
     <string name="upgrade">Uppgradera</string>
-    <string name="payment_options_">Betalningsalternativ</string>
-    <string name="other_plans_">För planer med mer lagring, uppgradera genom
-    ProtonMail webmail.</string>
-    <string name="upgrade_paid_user">Tack för att du är en betalande användare!</string>
-    <string name="select_account_type_">Välj kontotyp</string>
-    <string name="select_account_type_subtitle_">ProtonMail är en gratistjänst med fokus på allmänhetens bästa. Du kan stödja online integriteten genom att välja ett konto du betalar för.</string>
-    <string name="plan_free_with_price_">GRATIS</string>
-    <string name="plan_plus_with_price_">PLUS%s/Månad</string>
-    <string name="plan_visionary_with_price_">Visionär%s/Månad</string>
-    <string name="plan_business_with_price_">BUSINESS%s/Månad</string>
-    <string name="plan_free_title_">Standardkonto med ett begränsat antal funktioner</string>
-    <string name="plan_plus_title_">Säker e-post med avancerade funktioner</string>
-    <string name="plan_visionary_title_">Specialkonton för våra supportrar</string>
-    <string name="plan_business_title_">Specialkonton för våra supportrar</string>
-    <string name="plan_plus_line2_">Skicka upp till 1000 meddelanden per dag</string>
-    <string name="plan_plus_line3_">Etiketter och anpassade filter</string>
-    <string name="plan_plus_line4_">Skicka krypterade meddelande till externa mottagare</string>
-    <string name="plan_plus_line7_">Prioriterad kundsupport</string>
-    <string name="plan_free_line1_">500 MB lagringsutrymme</string>
-    <string name="plan_free_line2_">150 meddelanden per dag</string>
-    <string name="plan_free_line3_">20 etiketter</string>
-    <string name="plan_free_line4_">Egna domäner: stöds ej</string>
-    <string name="plan_free_line5_">1 adress</string>
-    <string name="plan_free_line6_">Kundsupport: begränsad</string>
-    <string name="plan_visio_line2_">Inga sändningsgränser</string>
-    <string name="plan_visio_line3_">Tidig tillgång till nya funktioner</string>
-    <string name="plan_visio_line6_">Hjälp oss välja nya funktioner genom Visionary-exklusiva omröstningar</string>
-    <string name="plan_business_line1_">kommer snart, så organisationer kan åtnjuta krypterad epost!</string>
-    <string name="currency_duration_">Valuta &amp; Löptid</string>
-    <string name="credit_card_name_">Namnet på kreditkort/betalkort</string>
-    <string name="zip_code_">Postnummer</string>
-    <string name="card_number_">Kortnummer</string>
-    <string name="billing_information_">Faktureringsuppgifter</string>
     <string name="country">Land</string>
-    <string name="cvc_">CVC</string>
-    <string name="terms_and_conditions_billing_">Genom att klicka Skicka, så accepterar    du \n<a href="https://protonmail.com/terms-and-conditions">ProtonMails användarvillkor</a></string>
-    <string name="submit_">Skicka</string>
-    <string name="currency_">Valuta</string>
-    <string name="plan_duration_">Faktureringsperiod</string>
-    <string name="duration_annual_line1_">Årlig plan <font color="#C3E129">Spara 20%</font></string>
-    <string name="per_month_text_only_">per månad</string>
-    <string name="duration_annual_line3">Faktureras som %s /år</string>
-    <string name="duration_annual_line4">Faktureras %s /månad</string>
-    <string name="duration_monthly_line1_">Månatlig plan</string>
-    <string name="duration_monthly_line3">Spara 20%</string>
     <string name="set_cont">Ange &amp; Forsätt</string>
-    <string name="payment_error_">Betalningsfel</string>
     <string name="error">Fel</string>
-    <string name="try_another_card">Prova ett annat kort</string>
-    <string name="try_another_paypal">Betala med PayPal</string>
-    <string name="try_another_payment_method_">Prova en annan</string>
-    <string name="submit_paypal_">Betala med Paypal</string>
-    <string name="picker_card_">Kredit/betalkort</string>
-    <string name="picker_paypal_">PayPal</string>
-    <string name="paypal_disclaimer_">Du kommer att behöva logga in med ditt PayPal konto för att slutföra transaktionen. Din webbläsare kommer öppna ett nytt fönster med PayPal.</string>
-    <string name="payment_picker_disclaimer_">Vänligen välj betalnings metod</string>
-    <string name="payment_success_title_">Betalningen lyckades!</string>
-    <string name="payment_success_text_">Kontot håller på att uppgraderas, vänligen vänta. Tack för din förståelse!</string>
-    <string name="donation_success_title">Donation lyckades!</string>
-    <string name="donation_success_text">Ditt stöd är mycket viktigt att hålla ProtonMail igång. Tack för att du stödjer internetsekretess!</string>
-    <string name="create_free_account_">Skapa ett gratiskonto</string>
     <string name="storage_gb">%d GB lagringsutrymme</string>
     <string name="storage_mb">%d MB lagringsutrymme</string>
     <string name="max_addresses">Upp till %d e-postadresser</string>
     <string name="inline_prefix">[Inline]</string>
     <string name="inline_header">%d Infogade bilder</string>
     <string name="select">Välj</string>
-    <string name="change_currency_">Ändra valuta</string>
-    <string name="switch_billing_monthly_">Byt till månadsvis</string>
-    <string name="switch_billing_yearly">Byt till per år</string>
     <string name="warning">Varning</string>
     <string name="empty_recovery_email_question">Varning: Återställning av kontot är inte möjligt, du har inte angett en e-postadress för återställning av ditt lösenord. Fortsätta utan e-postadress för återställning?</string>
     <string name="card_details_title">%1$s (*** %2$s)</string>
     <string name="card_details_subtitle">Löper ut %s</string>
-    <string name="payment_methods_">Betalningsmetoder</string>
-    <string name="payment_approval_activity">Betalnings Metod Godkännande</string>
-    <string name="payment_approval_success">Betalningsmetoden har blivit godkänd</string>
-    <string name="payment_approval_unknown_error_description">Ett fel uppstod när din betalning skulle verifieras. Vänligen försök igen eller med ett annat kort.</string>
-    <string name="payment_approval_cancel_error_description">Betalningen avbröts under verifieringen. Försök igen eller testa med ett annat kort.</string>
-    <string name="payment_approval_consumed_error_description">Betalningsmetoden har redan använts för denna betalningen. Vänligen kontrollera din prenumerationsstatus.</string>
     <string name="no_payment_methods">Du har inte sparat några betalningsmetoder.</string>
     <string name="edit_payment_methods">Logga in på protonmail.com för att ändra faktureringsuppgifter.</string>
     <string name="message_not_loaded">Meddelande inte öppnat</string>
@@ -489,12 +351,7 @@
     <string name="delete_selected">Radera markerade</string>
     <string name="pin_not_activated">PIN-kod inte aktiverad</string>
     <string name="available_options">Tillgängliga alternativ</string>
-    <string name="current_recovery_email_">Nuvarande återställningsadress</string>
     <string name="change_recovery_email">Ändra återställningsadress</string>
-    <string name="new_recovery_email_">Ny återställningsadress</string>
-    <string name="confirm_new_recovery_email_">Bekräfta ny återställningsadress</string>
-    <string name="recovery_emails_invalid_">E-postadressen stämmer inte eller är ogiltig</string>
-    <string name="authenticate_">Autentisera</string>
     <string name="background_sync_subtitle">Om detta alternativ är aktiverat, kommer appen att synkronisera med servern i bakgrunden. Om den avaktivers så kommer push-notifieringar att avaktiveras.</string>
     <string-array name="notification_options">
         <item>Inga vibrationer eller ljud</item>
@@ -742,7 +599,6 @@
     <string name="contact_add_addr_to_group">Lägga till adressen till grupper</string>
     <string name="title_activity_address_chooser">Hantera adresser</string>
     <string name="title_activity_account_manager">Hantera konton</string>
-    <string name="title_activity_connect_account_">Anslut konto</string>
     <string name="account_manager_add_account">Lägg till konto</string>
     <string name="account_manager_remove_all_accounts">Tar bort alla konton</string>
     <string name="account_manager_note">Du kan vara samtidigt inloggad på obegränsat antal betalda ProtonMail-konton och ett gratis konto.</string>
@@ -752,7 +608,6 @@
     <string name="manage_accounts_user_loggedout">%s (utloggad)</string>
     <string name="manage_accounts_user_primary">%s (primär)</string>
     <string name="account_manager_remove">Ta bort</string>
-    <string name="connect_account_login_title_">Logga in till ditt Protonmail konto</string>
     <string name="default_error_message">Ett fel uppstod</string>
     <string name="no_contact_groups">Ingen kontaktgrupp</string>
     <string name="search_contacts_inside_group">Sök efter kontakter i kontaktgrupper</string>
@@ -943,7 +798,6 @@
     <string name="connect_account_limit_subtitle">Du kan inte lägga till ytterligare ett gratis ProtonMail-konto. Endast ett gratis ProtonMail-konto kan läggas till. Logga ut från ditt andra gratiskonto eller uppgradera ett av dina gratiskonton till ett betalt konto.</string>
     <string name="switch_accounts_question">Byt till konto?</string>
     <string name="switch_to_account">Byt till %s</string>
-    <string name="login_failure_missing_keys">Det finns inga nycklar för det kontot du försöker lägga till. Lägg till detta konto som ett första konto i appen eller logga in via webbversionen, för att skapa nycklar och sedan lägga till det som ett ytterligare konto i appen.</string>
     <!-- endregion -->
     <!-- region Compose shortcut -->
     <string name="shortcut_compose">Compose</string>
