--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -22,20 +22,13 @@
     <string name="encrypted_emails">ЗАШИФРОВАНА ПОШТА</string>
     <string name="secure_email_swiss">Безпечна пошта,\n
 із Швейцарії</string>
-    <string name="decrypt_mailbox_">Розшифрувати <b>поштову скриньку</b></string>
     <string name="decrypt">Розшифрувати</string>
-    <string name="user_sign_in_">Ім\'я користувача</string>
-    <string name="two_factor_sign_in_">Двоетапна перевірка</string>
-    <string name="sign_in_">Увійти</string>
+    <string name="sign_in">Увійти</string>
     <string name="sign_out">Вийти</string>
     <string name="sign_out_question">Ви дійсно хочете вийти?</string>
-    <string name="mailbox_password_">Пароль поштової скриньки</string>
-    <string name="two_factor_code_">Код двоетапної перевірки</string>
     <string name="processing_request">Ваш запит обробляється</string>
     <!-- should check for html tag -->
     <string name="need_to_be_logged_in">Ви не увійшли!</string>
-    <string name="forgot_password_">Забули пароль?</string>
-    <string name="reset_mailbox_password_">СКИНУТИ ПАРОЛЬ ПОШТОВОЇ СКРИНЬКИ</string>
     <string name="forgot_mailbox_password">Щоб скинути пароль поштової скриньки, скористайтеся вебверсією ProtonMail за адресою protonmail.com</string>
     <!-- Toast messages -->
     <string name="error_chrome_disabled">Неможливо завантажити вміст. Будь ласка, увімкніть Chrome</string>
@@ -45,10 +38,7 @@
     <string name="no_more_messages">Більше повідомлень немає</string>
     <string name="mailbox_login_failure">Не вдалося увійти до поштової скриньки</string>
     <string name="login_failure">Не вдалося увійти</string>
-    <string name="invalid_server_proof">Неприпустиме підтвердження сервера</string>
-    <string name="invalid_credentials">Недійсні облікові дані</string>
     <string name="incorrect_key_parameters">Неправильні параметри ключа</string>
-    <string name="invalid_mailbox_password">Недійсний пароль поштової скриньки</string>
     <string name="not_signed_up">Ви не зареєстровані в програмі ProtonMail Android Beta</string>
     <string name="no_network">Немає мережі</string>
     <string name="no_network_queued">Немає мережі, повідомлення в очікуванні</string>
@@ -218,46 +208,17 @@
     <string name="enter">Увійти</string>
     <string name="cancel">Скасувати</string>
     <string name="close">Закрити</string>
-    <string name="change_password_">Змінити пароль</string>
-    <string name="change_mailbox_password_">Змінити пароль поштової скриньки</string>
     <string name="eo_password_title">Встановити пароль</string>
     <string name="eo_password_subtitle">Встановити пароль для шифрування цього повідомлення для Користувачів поза ProtonMail</string>
     <string name="eo_password_more_info">Отримати більше інформації</string>
-    <string name="old_login_password_">Чинний пароль для входу</string>
-    <string name="new_login_password_">Новий пароль</string>
-    <string name="confirm_new_login_password_">Підтвердити новий пароль</string>
-    <string name="new_mailbox_password_">Новий пароль поштової скриньки</string>
-    <string name="confirm_new_mailbox_password_">Підтвердити новий пароль поштової скриньки</string>
     <string name="no_attachments">0 вкладень</string>
-    <string name="new_passwords_not_valid">Введено неправильні дані</string>
-    <string name="new_passwords_do_not_match">Нові паролі не співпадають</string>
-    <string name="new_login_password_saved">Новий пароль для входу збережено</string>
-    <string name="new_mailbox_password_saved">Новий пароль від поштової скриньки збережений</string>
     <string name="pin_lock_option_settings">Налаштування блокування програми</string>
     <string name="pin_lock_after">Блокувати після</string>
     <string name="lock_the_app">Заблокувати додаток</string>
     <string name="display_name_banned_chars">Неприпустиме показуване ім\'я. \'&gt;\' і \'&lt;\' не дозволені</string>
     <string name="cont">Продовжити</string>
     <string name="reply_prefix_on">Увімкнено</string>
-    <string name="create_new_account_">Створити новий обліковий запис</string>
-    <string name="setup_new_account">Налаштувати обліковий запис</string>
-    <string name="create_account_">Створити обліковий запис</string>
-    <string name="create_passwords_">Встановити гасло</string>
-    <string name="caps_username_">Ім\'я користувача</string>
-    <string name="caps_login_password_">Гасло</string>
-    <string name="caps_confirm_password_">Підтвердити гасло</string>
-    <string name="caps_optional_">* НЕОБОВ\'ЯЗКОВО</string>
-    <string name="update_me_for_new_features_">Повідомляйте мене про нові можливості</string>
-    <string name="create_mailbox_password_">Задати гасло</string>
-    <string name="password_note_"><b>Примітка:</b> Це використовується для шифрування і розшифровки повідомлень.
-         Не загубіть це гасло, ми не можемо його відновити. Якщо ви втратили ваше гасло, ви не зможете читати ваші листи.</string>
-    <string name="username_note_"><b>Примітка:</b> Ім\'я користувача – це також ваша ProtonMail адреса</string>
     <string name="terms_and_conditions">Користуючись ProtonMail-ом, Ви погоджуєтесь з нашими\n <a href="https://protonmail.com/terms-and-conditions"> умовами</a> та <a href="https://protonmail.com/privacy-policy"> політикою конфіденційності</a></string>
-    <string name="encryption_setup_">Параметри шифрування</string>
-    <string name="high_security_">Велика безпека (2048 бітів)</string>
-    <string name="current_standard_">Чинний стандарт</string>
-    <string name="extreme_security_">Найбільша безпека (4096 бітів)</string>
-    <string name="highest_security_">Доступний найвищий рівень шифрування.<b> Може забрати кілька хвилин для налаштування.</b></string>
     <string name="labels_title_apply">Застосувати Мітки</string>
     <string name="labels_title_add">Додати мітку</string>
     <string name="labels_title">Мітки</string>
@@ -296,15 +257,6 @@
     <string name="display_images">Показати зображення</string>
     <string name="retry">Повторити</string>
     <string name="saving_failed_no_conn">Не вдалось зберегти, нема зв\'язку</string>
-    <string name="username_is_available">%s доступно!</string>
-    <string name="username_is_not_available">%s НЕ доступно!</string>
-    <string name="username_is_too_long">Найбільше довжина імені користувача — %d символів!</string>
-    <string name="congratulation_">Вітаємо!</string>
-    <string name="new_account_ready_">Ваш новий захищений обліковий запис\nе-пошти готовий.</string>
-    <string name="optional_email_note_">Не обов\'язкова адерса е-пошти для відновлення дозволяє Вам
-        скинути вхідне гасло, якщо Ви його забудете.</string>
-    <string name="optional_display_name_">Коли ви надсилаєте е-лист, це ім\'я
-        відображається в полі відправника.</string>
     <string name="close_engagement">закрити тур</string>
     <string name="engagement_title_welcome">Ласкаво просимо до ProtonMail-а!</string>
     <string name="engagement_title_swipe">Дії на швидкі відрухи</string>
@@ -322,7 +274,6 @@
     <string name="attachment_exists">Вкладення вже прикріплено</string>
     <string name="sending_email_success">Код підтвердження надіслано</string>
     <string name="sending_email_failed">Не вдалося надіслати перевірковий код</string>
-    <string name="password_not_valid_">Введено неприпустиме гасло</string>
     <string name="send_code_wait">Будь ласка, заждіть %d секунд перш ніж клікнути знов</string>
     <string name="eo_password_not_completed">Гасло листа не завершене.</string>
     <string name="delinquency_subtitle">Доступ до цього облікового запису призупинено через несплату. Будь ласка, увійдіть в систему, використовуючи protonmail.com, щоб оплатити рахунок.</string>
@@ -383,109 +334,20 @@
     <string name="log_out">Вийти з %s?</string>
     <string name="logout_question">Впевнені, що хочете вийти?</string>
     <string name="logout_question_next_account">Вас буде перемкнуто на %s.</string>
-    <string name="upselling_">Оновлення/пожертвувати</string>
-    <string name="upselling_title_">ProtonMail є бесплатний і має відкритий вихідний код</string>
-    <string name="upselling_subtitle_">Ми потребуємо Вашої підримки щоб продовжувати захищати конфіденційність та покращувати ProtonMail</string>
-    <string name="upselling_donate_title_">Пожертва</string>
-    <string name="upselling_upgrade_title_">Підвищітись до ProtonMail Plus</string>
-    <string name="upselling_donate_subtitle">Ваш внесок допоможе нам збільшити спроможності ProtonMail-а та продовжити розвивати його як вільний програмний продукт з відкритим початковим кодом. Лише завдяки підтримці спільноті ми можемо продовжувати надавати ProtonMail людям у всьому світі.</string>
-    <string name="upgrade_donate">Оновлення/пожертвувати</string>
-    <string name="upselling_donate_pick_amount_">Виберіть суму пожертви або введіть будь-яку суму</string>
-    <string name="amount_5_">5€</string>
-    <string name="amount_15">15€</string>
-    <string name="amount_50">50€</string>
-    <string name="amount_100">100€</string>
-    <string name="donation_amount_">Вкажіть суму пожертви</string>
-    <string name="donate_">Пожертва</string>
-    <string name="donate_paypal_bitcoin_">Пожертва через PayPal чи Bitcoin</string>
-    <string name="upgrade_line1_">Все включене в наш вільний план</string>
-    <string name="upgrade_line2_">5 ГБ сховища</string>
-    <string name="upgrade_line3_">Використовуйте свій власний домен</string>
-    <string name="upgrade_line4_">До 5 псевдонімів</string>
-    <string name="upgrade_line5_">Пріоритетна служба підтримки</string>
     <string name="upgrade">Покращити</string>
-    <string name="payment_options_">Варіант сплати</string>
-    <string name="other_plans_">Для планів з більшим сховищем, оновлюйтесь через
-    веб інтерфейс е-пошти ProtonMail.</string>
-    <string name="upgrade_paid_user">Дякуюмо, що Ви - платний користувач!</string>
-    <string name="select_account_type_">Виберіть тип облікового запису</string>
-    <string name="select_account_type_subtitle_">ProtonMail — це безплатна служба
-    для загального користування. Ви можете допомогти підтримувати приватність в Інтернеті, вибравши платний обліковий запис.</string>
-    <string name="plan_free_with_price_">БЕЗКОШТОВНО</string>
-    <string name="plan_plus_with_price_">PLUS %s/місяць</string>
-    <string name="plan_visionary_with_price_">VISIONARY %s/місяць</string>
-    <string name="plan_business_with_price_">BUSINESS %s/місяць</string>
-    <string name="plan_free_title_">Базовий обліковий запис з обмеженими можливостями</string>
-    <string name="plan_plus_title_">Безпечна електронна пошта з прогресивними функціями</string>
-    <string name="plan_visionary_title_">Особливі облікові записи для наших прибічників</string>
-    <string name="plan_business_title_">Особливі облікові записи для наших прибічників</string>
-    <string name="plan_plus_line2_">Надсилайте до 1000 листiв на день</string>
-    <string name="plan_plus_line3_">Мітки та користувацькі фільтри</string>
-    <string name="plan_plus_line4_">Надіслати зашифрованого листа зовнішнім одержувачам</string>
-    <string name="plan_plus_line7_">Пріоритетна служба підтримки</string>
-    <string name="plan_free_line1_">500 МБ сховища</string>
-    <string name="plan_free_line2_">150 листiв на добу</string>
-    <string name="plan_free_line3_">20 міток</string>
-    <string name="plan_free_line4_">Користувацькі домени: не підтримуються</string>
-    <string name="plan_free_line5_">1 адреса</string>
-    <string name="plan_free_line6_">Підримка клієнтів: обмежена</string>
-    <string name="plan_visio_line2_">Жодних обмежень надсилання листів</string>
-    <string name="plan_visio_line3_">Ранній доступ до нових функцій</string>
-    <string name="plan_visio_line6_">Допоможіть обрати нові функції за допомогою опитувань для Visionary-користувачів</string>
-    <string name="plan_business_line1_">найближчим часом для організацій, щоб користуватись шифрованою е-поштою!</string>
-    <string name="currency_duration_">Валюта й Тривалість</string>
-    <string name="credit_card_name_">Ім\'я на кредитну/дебетовій картці</string>
-    <string name="zip_code_">Поштовий індекс</string>
-    <string name="card_number_">Номер картки</string>
-    <string name="billing_information_">Платіжна інформація</string>
     <string name="country">Країна</string>
-    <string name="cvc_">CVC</string>
-    <string name="terms_and_conditions_billing_">Натиснувши кнопку Надіслати, ви погоджуєтесь
-    дотримуватись\n <a href="https://protonmail.com/terms-and-conditions">правил та умов ProtonMail-а</a></string>
-    <string name="submit_">Надіслати</string>
-    <string name="currency_">Валюта</string>
-    <string name="plan_duration_">Платіжний Цикл</string>
-    <string name="duration_annual_line1_">Щорічний план <font color="#C3E129"> Заощадити 20%</font></string>
-    <string name="per_month_text_only_">на місяць</string>
-    <string name="duration_annual_line3">Нараховано як %s/рік</string>
-    <string name="duration_annual_line4">Нараховано %s/місяць</string>
-    <string name="duration_monthly_line1_">Місячний план</string>
-    <string name="duration_monthly_line3">Заощадити 20%</string>
     <string name="set_cont">Установити &amp; Продовжити</string>
-    <string name="payment_error_">Помилка сплати</string>
     <string name="error">Помилка</string>
-    <string name="try_another_card">Спробуйте іншу картку</string>
-    <string name="try_another_paypal">Сплатити за допомогою PayPal</string>
-    <string name="try_another_payment_method_">Cпробувати іншу</string>
-    <string name="submit_paypal_">Оплатити за допомогою PayPal</string>
-    <string name="picker_card_">Банківська картка</string>
-    <string name="picker_paypal_">PayPal</string>
-    <string name="paypal_disclaimer_">Щоб завершити цю транзакцію, вам потрібно увійти у ваш обліковий запис PayPal. Ми відкриємо нове вікно браузера з PayPal для вас.</string>
-    <string name="payment_picker_disclaimer_">Будь ласка, виберіть спосіб оплати</string>
-    <string name="payment_success_title_">Успішно сплачено!</string>
-    <string name="payment_success_text_">Ми оновлюємо ваш обліковий запис, будь ласка, зачекайте хвилинку. Дякуємо за вашу підтримку!</string>
-    <string name="donation_success_title">Допомогу надіслано!</string>
-    <string name="donation_success_text">Ваша допомога має важливе значення для продовження роботи ProtonMail. Дякуємо за підтримку приватності Інтернету!</string>
-    <string name="create_free_account_">Створити безплатний обліковий запис</string>
     <string name="storage_gb">%d ГБ сховища</string>
     <string name="storage_mb">%d МБ сховища</string>
     <string name="max_addresses">До %d поштових псевдонімів</string>
     <string name="inline_prefix">[Inline]</string>
     <string name="inline_header">%d вбудованих зображень</string>
     <string name="select">Обрати</string>
-    <string name="change_currency_">Змінити валюту</string>
-    <string name="switch_billing_monthly_">Перейти на місячну</string>
-    <string name="switch_billing_yearly">Перейти на річну</string>
     <string name="warning">Засторога</string>
     <string name="empty_recovery_email_question">Попередження: Ви не вказали запасну адресу е-пошти, тож відновлення облікового запису неможливе, якщо ви забудете пароль. Продовжити без запасної адреси е-пошти?</string>
     <string name="card_details_title">%1$s (*** %2$s)</string>
     <string name="card_details_subtitle">Дата завершення: %s</string>
-    <string name="payment_methods_">Способи сплати</string>
-    <string name="payment_approval_activity">Підтвердження способу оплати</string>
-    <string name="payment_approval_success">Спосіб оплати був схвалений</string>
-    <string name="payment_approval_unknown_error_description">Сталася помилка під час спроби перевірити ваш спосіб оплати. Будь ласка, спробуйте ще раз, або перемкніться на іншу картку.</string>
-    <string name="payment_approval_cancel_error_description">Перевірку способу оплати скасовано. Повторіть спробу або перейдіть на іншу картку.</string>
-    <string name="payment_approval_consumed_error_description">Спосіб оплати вже використовується для цього платежу. Будь ласка, перевірте стан вашої передплати.</string>
     <string name="no_payment_methods">У вас немає збережених методiв сплати.</string>
     <string name="edit_payment_methods">Будь ласка увійти в систему через protonmail.com для редагування платіжної інформації.</string>
     <string name="message_not_loaded">Лист не завантажено</string>
@@ -504,12 +366,7 @@
     <string name="delete_selected">Стерти вибране</string>
     <string name="pin_not_activated">PIN не активовано</string>
     <string name="available_options">Доступні параметри</string>
-    <string name="current_recovery_email_">Чинна поштова адреса для відновлення</string>
     <string name="change_recovery_email">Змінити адресу е-пошти для відновлення</string>
-    <string name="new_recovery_email_">Нова е-пошта для відновлення</string>
-    <string name="confirm_new_recovery_email_">Підтвердити нову е-пошту для відновлення</string>
-    <string name="recovery_emails_invalid_">Адреса е-пошти не підходить або неправильно написана</string>
-    <string name="authenticate_">Автентифікація</string>
     <string name="background_sync_subtitle">Якщо цю функцію ввімкнено, застосунок синхронізуватиметься з сервером у тлі. Вимкнення цієї функції вимкне й \"пуш\" сповіщення.</string>
     <string-array name="notification_options">
         <item>Немає вібрації чи звуку</item>
@@ -761,7 +618,6 @@
     <string name="contact_add_addr_to_group">Додати адресу до груп</string>
     <string name="title_activity_address_chooser">Керувати адресами</string>
     <string name="title_activity_account_manager">Керувати обліковими записами</string>
-    <string name="title_activity_connect_account_">Під\'єднати обліковий запис</string>
     <string name="account_manager_add_account">Додати обліковий запис</string>
     <string name="account_manager_remove_all_accounts">Вилучення всіх облікових записів</string>
     <string name="account_manager_note">Ви можете одночасно увійти в необмежену кількість платних облікових записів ProtonMail і до одного безплатного.</string>
@@ -771,7 +627,6 @@
     <string name="manage_accounts_user_loggedout">%s (не в системі)</string>
     <string name="manage_accounts_user_primary">%s (основний)</string>
     <string name="account_manager_remove">Видалити</string>
-    <string name="connect_account_login_title_">Увійти до вашого облікового запису ProtonMail</string>
     <string name="default_error_message">Сталась помилка</string>
     <string name="no_contact_groups">Нема груп контактів</string>
     <string name="search_contacts_inside_group">Шукати контакти всередині групи</string>
@@ -980,7 +835,6 @@
     <string name="connect_account_limit_subtitle">Ви не можете додати іншу безплатний обліковий запис ProtonMail. Можна додати лише один безплатний обліковий запис ProtonMail. Вийдіть з іншого безплатного облікового запису або переведіть один із безплатних облікових записів на платного облікового запису.</string>
     <string name="switch_accounts_question">Змінити обліковий запис?</string>
     <string name="switch_to_account">Змінено на %s</string>
-    <string name="login_failure_missing_keys">Обліковий запис, який ви намагаєтеся додати, не має згенерованих ключів. Додайте цей обліковий запис в якості першого облікового запису в застосунку, або увійдіть через вебверсію, щоб згенерувати ключі, а потім додайте їх як додатковий обліковий запис у застосунку.</string>
     <!-- endregion -->
     <!-- region Compose shortcut -->
     <string name="shortcut_compose">Написати новий лист</string>
